--- a/ok/zjz/zjz02-0.5.0.0.0.md
+++ b/ok/zjz/zjz02-0.5.0.0.0.md
@@ -1,16 +1,16 @@
-## 〔附〕拔罐法&
+## 〔附〕拔罐法
 
-拔罐法是以罐为工具，利用燃烧热力排除罐内空气，造成负 压，使罐吸附于腧穴或应施术的部位，产生温热刺激并造成皮肤充血，瘀血现象的一种疗法。最早见于《肘后方》，以牛角制罐， 作外科吸脓血之用，故又称角法和吸筒法。随着医疗实践的不断发展，罐的质料大为改进，使用方法有所发展，治疗范围有所扩大，不仅用于外科，也用于内科的一部分病证。拔罐法常和针灸 疗法配合使用，其作用与灸法有相似之处。
+拔罐法是以罐为工具，利用燃烧热力排除罐内空气，造成负压，使罐吸附于腧穴或应施术的部位，产生温热刺激并造成皮肤充血、瘀血现象的一种疗法。最早见于《肘后方》，以牛角制罐， 作外科吸脓血之用，故又称角法和吸筒法。随着医疗实践的不断发展，罐的质料大为改进，使用方法有所发展，治疗范围有所扩大，不仅用于外科，也用于内科的一部分病证。拔罐法常和针灸疗法配合使用，其作用与灸法有相似之处。
 
 ### 1.罐的种类：
 
 罐的种类很多，临床常用的有以下几种：
 
-(1)竹罐：用直径3〜5厘米坚固无损的竹子，制成6〜10厘米长的腰鼓形的圆筒，一端留节做底，另一端做罐口，打磨光滑平正。它的优点是取材容易，经济易制，轻巧，不易摔碎。缺点容易燥裂、漏气，吸附力不大。
+(1)竹罐：用直径3〜5厘米坚固无损的竹子，制成6〜10厘米长的腰鼓形的圆筒，一端留节做底，另一端做罐口，打磨光滑平正。它的优点是取材容易，经济易制，轻巧，不易摔碎。缺点容易燥裂、漏气、吸附力不大。
 
 （2）陶罐：是由陶土烧制而成，有大有小，罐口平正光滑，肚大而圆，口、底较小，其状如腰鼓。它的优点是吸着力大，缺点是质量易摔碎、损坏。
 
-（3）玻璃罐：形如球状，罐口平滑而宽，有大、中、小三种 不同型号。它的优点是质地透明，使用时可以窥测罐内皮肤的充 血、瘀血程度，便于随时掌握情况，缺点是容易捧碎、损坏。
+（3）玻璃罐：形如球状，罐口平滑而宽，有大、中、小三种 不同型号。它的优点是质地透明，使用时可以窥测罐内皮肤的充血、瘀血程度，便于随时掌握情况，缺点是容易摔碎、损坏。
 
 （4）抽气罐：用青、链霉素药瓶，将瓶底切去磨平，切口须光洁，瓶口的橡皮塞须保留完整，便于拔气时用。近年已发展成电动抽气吸罐。
 
@@ -20,23 +20,23 @@
 
 （1）火罐的操作法：用燃烧时火焰的热力排除罐内空气，使罐内呈负压，将罐吸着在皮肤上。有以下几种方法：
 
-投火法：将小纸条点燃后、投入罐内，然后速将罐罩在施术部位（图235)。此法适用于侧面横拔，否则，会因燃烧物落下而 烧伤皮肤。
+投火法：将小纸条点燃后、投入罐内，然后速将罐罩在施术部位（图235)。此法适用于侧面横拔，否则，会因燃烧物落下而烧伤皮肤。
 
-闪火法：用镊子或止血钳子挟住酒精棉球，点燃后在火罐内 壁中段绕1〜3圈后，迅速退出，然后将罐罩在施术部位（图236)。此法比较安全，不受体位限制，是较常用的拔罐方法。	
+闪火法：用镊子或止血钳子挟住酒精棉球，点燃后在火罐内壁中段绕1〜3圈后，迅速退出，然后将罐罩在施术部位（图236)。此法比较安全，不受体位限制，是较常用的拔罐方法。	
 
 ![](img/图235、236、237、238.jpg)
 
-贴棉法：用一平方厘米的棉花片，不要太厚，略浸95%酒精，贴在罐内壁的上、中段，以火柴点燃，罩在施术部位上(图237)此法多用横位拔罐。
+贴棉法：用一平方厘米的棉花片，不要太厚，略浸95%酒精，贴在罐内壁的上、中段，以火柴点燃，罩在施术部位上(图237)。此法多用横位拔罐。
 
 架火法：用2〜3平方厘米不易燃烧的块状物作支架，上置95%的酒锖棉球，点燃后把罐罩上。此法去罩罐要准确，不要碰掉燃烧的棉球，以防烧伤皮肤，适用用于平卧位（图238)。
 
-（2）水罐操作方法：一般用于竹罐。先将竹罐放在锅内加水 煮沸，用镊子倒挟竹罐的底端，甩去罐内的沸水，并用折迭的冷 毛巾紧扪罐口。乘热按在施术部位，即能吸住。适用任何部位的拔罐。
+（2）水罐操作方法：一般用于竹罐。先将竹罐放在锅内加水煮沸，用镊子倒挟竹罐的底端，甩去罐内的沸水，并用折迭的冷毛巾紧扪罐口。乘热按在施术部位，即能吸住。适用任何部位的拔罐。
 
 ### 3.各种拔罐法的运用：
 
-（1）单罐：用于较小范围病变或压痛点。可按病变的或压痛 的范围大小，选用适当口径的火罐。如胃病可在中院穴拔罐，岗上肌肌腱炎在[肩髃](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.15.md)穴处拔罐等。
+（1）单罐：用于较小范围病变或压痛点。可按病变的或压痛的范围大小，选用适当口径的火罐。如胃病可在中院穴拔罐，岗上肌肌腱炎在[肩髃](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.15.md)穴处拔罐等。
 
-（2）多罐：用于病变范围.比较广泛的疾病。可按病变部位的解剖形态等情况，酌量吸拔数个乃至十数个。如某一肌束劳损时可按肌束的位置成行排列吸拔多个罐，称为排罐法。治疗某些内脏或器官的瘀血时，可按脏器的解剖部位的范围在相应的体表部位纵横并列吸拔几个罐子。
+（2）多罐：用于病变范围比较广泛的疾病。可按病变部位的解剖形态等情况，酌量吸拔数个乃至十数个。如某一肌束劳损时可按肌束的位置成行排列吸拔多个罐，称为排罐法。治疗某些内脏或器官的瘀血时，可按脏器的解剖部位的范围在相应的体表部位纵横并列吸拔几个罐子。
 
 （3）闪罐：罐子拔上后，立即起下，如此反复多次地拔住起下，起下拔住，至皮肤潮红为止，多用于局部皮肤麻木、疼痛或功能减退等疾患，如面瘫等。
 
@@ -48,13 +48,13 @@
 
 （6）药罐：常用的药罐有两种：煮药罐：将配制成的药物装入布袋内，扎紧袋口，放入清水煮沸至适当浓度，再把竹罐投入药液内煮15分钟。使用时，按水罐法吸拔在应拔的部位上，多用于风湿痛等病。
 
-常用药物处方：[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)、蕲艾、[羌活](https://www.gmzyjc.com/read/bc/bc01-1.1.6.0.0.md)、活独、防 风、[秦艽](https://www.gmzyjc.com/read/bc/bc06-0.0.4.0.0.md)、[木瓜](https://www.gmzyjc.com/read/bc/bc06-0.0.5.0.0.md)、[川椒](https://www.gmzyjc.com/read/bc/bc07-0.7.0.0.0.md)、生[乌头](https://www.gmzyjc.com/read/bc/bc07-0.1.1.0.0.md)、蔓陀罗花、[刘寄奴](https://www.gmzyjc.com/read/bc/bc12-0.0.19.0.0.md)、[乳香](https://www.gmzyjc.com/read/bc/bc12-0.0.13.0.0.md)、[没药](https://www.gmzyjc.com/read/bc/bc12-0.0.14.0.0.md)各6克。
+常用药物处方：[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)、蕲艾、[羌活](https://www.gmzyjc.com/read/bc/bc01-1.1.6.0.0.md)、活独、防风、[秦艽](https://www.gmzyjc.com/read/bc/bc06-0.0.4.0.0.md)、[木瓜](https://www.gmzyjc.com/read/bc/bc06-0.0.5.0.0.md)、[川椒](https://www.gmzyjc.com/read/bc/bc07-0.7.0.0.0.md)、生[乌头](https://www.gmzyjc.com/read/bc/bc07-0.1.1.0.0.md)、蔓陀罗花、[刘寄奴](https://www.gmzyjc.com/read/bc/bc12-0.0.19.0.0.md)、[乳香](https://www.gmzyjc.com/read/bc/bc12-0.0.13.0.0.md)、[没药](https://www.gmzyjc.com/read/bc/bc12-0.0.14.0.0.md)各6克。
 
-贮药罐：在抽气罐内事先盛贮药液（约为罐子的2/3~1/2)。常用的药液为辣椒水、两面针酊、[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)汁、风湿酒等。然后按抽气 罐操作法，抽去空气，使罐吸在皮肤上。也有在玻璃罐内盛贮 1/3〜1/4的药液，然后用火罐法吸拔在皮肤上。常用于风湿痛，哮喘、咳嗽，感冒，溃疡病，慢性胃炎，消化不良，牛皮癣等。
+贮药罐：在抽气罐内事先盛贮药液（约为罐子的2/3~1/2)。常用的药液为辣椒水、两面针酊、[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)汁、风湿酒等。然后按抽气 罐操作法，抽去空气，使罐吸在皮肤上。也有在玻璃罐内盛贮 1/3〜1/4的药液，然后用火罐法吸拔在皮肤上。常用于风湿痛，哮喘，咳嗽，感冒，溃疡病，慢性胃炎，消化不良，牛皮癣等。
 
-（7）针罐：先在一定部位施行针刺，待达到一定的刺激量后将针留在原处，并以针刺处为中拔上火罐。如果与药罐结合称为针药罐，多用于风湿病。	
+（7）针罐：先在一定部位施行针刺，待达到一定的刺激量后，将针留在原处，并以针刺处为中心，拔上火罐。如果与药罐结合，称为针药罐，多用于风湿病。	
 
-（8）剌血（刺络）拔罐：用三棱针、粗毫针、皮肤针等，按病变部位的大小和出血要求，按刺血法刺破出血，然后拔上火罐，可以加强刺血法的效果。适用各种急性、慢性软组织损伤， 神经性皮炎，皮肤瘙痒，丹毒，神经衰弱， 胃肠神经官能症等。
+（8）剌血（刺络）拔罐：用三棱针、粗毫针、皮肤针等，先按病变部位的大小和出血要求，按刺血法刺破出血，然后拔上火罐，可以加强刺血法的效果。适用各种急性、慢性软组织损伤， 神经性皮炎，皮肤瘙痒，丹毒，神经衰弱， 胃肠神经官能症等。
 
 ### 4.适应范围：
 
@@ -70,21 +70,21 @@
 
 ### 5.注意事项
 
-（1）患者要取舒适体位，应根据不同部位，选择不同口径的火罐，注意选择肌肉丰满，富有弹性，没有毛发和骨骼凸凹的部 位，防止罐脱落。	
+（1）患者要取舒适体位，应根据不同部位，选择不同口径的火罐，注意选择肌肉丰满，富有弹性，没有毛发和骨骼凸凹的部位，防止罐脱落。	
 
 （2）皮肤有溃疡、过敏、水肿及大血管部位，不宜拔罐；孕妇的腹部和腰骶部，也不宜拔罐。
 
-（3）有自发性出血和损伤后出血不止的患者，不宜使用拔罐。
+（3）有自发性出血和损伤后出血不止的患者，不宜使用拔罐法。
 
 （4）起罐时手法要轻巧而缓慢，以一手抵住罐边皮肤，按压—下，使气漏入，罐子即能脱下，不可硬拉或旋动。	
 
-（5）拔火罐时应注意勿灼伤或烫伤皮肤。如出现烫伤、水泡。小的可不必处理，任其自然吸收；如水泡较大或皮肤有破损， 先用消毒针具刺破氷泡，或用注射器抽出水液，然后涂龙胆紫 并以纱布包數，防止感染。
+（5）拔火罐时应注意勿灼伤或烫伤皮肤。如出现烫伤、水泡，小的可不必处理，任其自然吸收；如水泡较大或皮肤有破损， 先用消毒针具刺破氷泡，或用注射器抽出水液，然后涂龙胆紫 并以纱布包數，防止感染。
 
 ### 〔临床应用〕
 
-拔罐法是一种物理疗法，是使罐内空气因热而膨胀逸出，当罐口紧贴皮肤时，罐内温度下降，空气稀薄而产生负压，吸力增 强，皮肤因被吸吮而高起，毛细血管扩张，局部充血，通过机体 的调整功能。以疏通气血，宣泄风寒湿邪，从而直接改善局部状 态，而达到治病目的。
+拔罐法是一种物理疗法，是使罐内空气因热而膨胀逸出，当罐口紧贴皮肤时，罐内温度下降，空气稀薄而产生负压，吸力增强，皮肤因被吸吮而高起，毛细血管扩张，局部充血，通过机体 的调整功能。以疏通气血，宣泄风寒湿邪，从而直接改善局部状态，而达到治病目的。
 
-拔罐应根据不同部位，选用大小合适的罐。应用投火法拔罐 时，火焰须旺，动作要快，使罐口向上倾斜，避免火原落下烫伤 皮肤。应用闪火法时，棉花棒蘸95%酒精不要过多，以防酒精滴 下烧伤皮肤。用贴棉法时，须防止燃着棉花脱下。用架火法时， 扣罩要准确，不要把燃着火架撞翻。用煮水罐时，应甩去罐中的 沸水、以免烫伤病人的皮肤。
+拔罐应根据不同部位，选用大小合适的罐。应用投火法拔罐时，火焰须旺，动作要快，使罐口向上倾斜，避免火原落下烫伤皮肤。应用闪火法时，棉花棒蘸95%酒精不要过多，以防酒精滴 下烧伤皮肤。用贴棉法时，须防止燃着棉花脱下。用架火法时， 扣罩要准确，不要把燃着火架撞翻。用煮水罐时，应甩去罐中的沸水、以免烫伤病人的皮肤。
 
 拔罐时，体位不要变动，防止罐脱落；经拔罐后，局部有瘀血未消退时，不要在原处拔罐。
 
