--- a/ok/bc/bc05-0.0.13.0.0.md
+++ b/ok/bc/bc05-0.0.13.0.0.md
@@ -1,6 +1,6 @@
 ### 海金沙
 
-〔原文〕**甘寒淡渗。除小肠膀胱血分湿热。治肿满五淋茎痛**⑴。**得栀子、牙硝、硼砂，治伤寒热狂。**<small>大热利小便，此釜底抽薪之义也。</small>**茎细如线，引竹木卫，叶纹皱处，有砂，黄赤色。忌火。**
+〔原文〕**甘寒淡渗。除小肠膀胱血分湿热。治肿满五淋茎痛**⑴。**得栀子、牙硝、硼砂，治伤寒热狂。**<small>大热利小便，此釜底抽薪之义也。</small>**茎细如线，引竹木上，叶纹皱处，有砂，黄赤色。忌火。**
 
 【讲解】⑴茎痛：指排尿时尿道疼痛。
 
@@ -10,6 +10,6 @@
 
 关于《备要》言及该植物形态之语，不甚贴切，不必深究。叶纹绉处有砂，此即药用的孢子囊。成熟孢子黄赤色。
 
-【临证应用】海金沙为治淋要药，无论血淋、石淋、膏淋、热淋，凡茎中疼痛用之尤效，多配滑石、石韦、车前子等利永通淋药同用。治水肿胀满可配逐水药牵牛子、甘遂等同用，如海金沙散。
+【临证应用】海金沙为治淋要药，无论血淋、石淋、膏淋、热淋，凡茎中疼痛用之尤效，多配滑石、石韦、车前子等利水通淋药同用。治水肿胀满可配逐水药牵牛子、甘遂等同用，如海金沙散。
 
 【用量用法】6—12克，布包入煎。
