--- a/ok/bc/bc03-0.1.14.0.0.md
+++ b/ok/bc/bc03-0.1.14.0.0.md
@@ -1,6 +1,6 @@
 ### 西 瓜
 
-**〔原文〕甘寒。解暑除寒，利便醒酒，名天生白虎汤**。西瓜、甜瓜，皆属生冷，多食伤脾助湿。《卫生歌》曰：瓜桃生冷宜少食，免致秋来成疟痢。瓜性寒，曝之尤寒。《稽食赋》曰：瓜曝则寒，油煎则冷，物性之异也。
+**〔原文〕甘寒。解暑除烦，利便醒酒，名天生白虎汤**。西瓜、甜瓜，皆属生冷，多食伤脾助湿。《卫生歌》曰：瓜桃生冷宜少食，免致秋来成疟痢。瓜性寒，曝之尤寒。《稽食赋》曰：瓜曝则寒，油煎则冷，物性之异也。
 
 【讲解】**西瓜清热解暑，有天生白虎汤之誉**。为葫芦科一年生蔓性草本植物西瓜的果瓤。取汁饮用。
 
