--- a/ok/gl/gl07-0.2.2.0.0.md
+++ b/ok/gl/gl07-0.2.2.0.0.md
@@ -1,4 +1,4 @@
-### 二、外治法*
+### 二、外治法
 
 外治法，是与内服药物疗法相对而言的，也就是《素问·五常政大论》所说的”上取下取，内取外取，以求其过”中的外取之法。它是利用手法（或配合一定的器械）、药物等施之于病者的机体外表某部或患病之处，以达到治疗目的的一种方法。
 
