--- a/ok/wk/wk01-1.0.0.0.0.md
+++ b/ok/wk/wk01-1.0.0.0.0.md
@@ -14,7 +14,7 @@
 
 这些原始的清创、止血、排脓、药物外敷等是人类在长期同疾病作斗争中发展起来的，是最原始的、简单的“外科处理”。这便是中医外科的起源。
 
-远在公元前十四世纪左右殷商代的甲骨文中就有外科病名的记载，如疾自（鼻）、疾耳、疾止（趾）、疾舌、疾足、疕、疥等，这是我国有史以来有关外科的最早文字记录。《山海经•东山经》中说“高氏之山，……其下多箴石。”郭璞注：“砭针，治痈肿者”。该书还载有38种疾病，外科病确痈、疽，痹、瘿、痔、疥等。《周礼•天官》有疡医的记载，并规定疡医“掌肿疡、溃疡、金疡、折疡之祝药、劀杀之齐"。祝药就是敷药，劀是括去脓血，杀是腐蚀剂去恶肉或剪去恶肉。这些是我国最早应用手术方法和腐蚀性药物治疗疾病的记载。医学的具体分工，有力地推动了医学按门类深入的发展。马王堆汉墓出土帛书《五十二病方》系春秋时代作品，是我国现今发现最早的古医方。书中载有感染、创伤、冻疮、诸虫咬伤、痔痿、肿瘤、皮肤病等30多种外科疾病。在“疽病”下，有“骨痘倍白蔹，肉疽（倍）黄芪，肾疽倍芍药”之说，这样针对不同的疾病，更换药物，调整剂量，可视为"辨证论治”的萌芽。并以“水银、谷汁而傅（敷）之”治皮肤病；用醇酒止痛和消毒，如“犬所齧，令无痛及易瘳方：令〔齧〕者卧，而令人以酒，财沃其伤。”这是世界上最早将水银和酒用作药物的记录。此外还记录了治疗痔疮的具体方法，如用小绳结扎“牡痔”，用地胆等药外敷“牡痔”，用滑润的“铤”作为检查治疗漏管的探针等。这说明，当时已有较高的外科治疗水平。
+远在公元前十四世纪左右殷商代的甲骨文中就有外科病名的记载，如疾自（鼻）、疾耳、疾止（趾）、疾舌、疾足、疕、疥等，这是我国有史以来有关外科的最早文字记录。《山海经•东山经》中说“高氏之山，……其下多箴石。”郭璞注：“砭针，治痈肿者”。该书还载有38种疾病，外科病有痈、疽，痹、瘿、痔、疥等。《周礼•天官》有疡医的记载，并规定疡医“掌肿疡、溃疡、金疡、折疡之祝药、劀杀之齐"。祝药就是敷药，劀是括去脓血，杀是腐蚀剂去恶肉或剪去恶肉。这些是我国最早应用手术方法和腐蚀性药物治疗疾病的记载。医学的具体分工，有力地推动了医学按门类深入的发展。马王堆汉墓出土帛书《五十二病方》系春秋时代作品，是我国现今发现最早的古医方。书中载有感染、创伤、冻疮、诸虫咬伤、痔痿、肿瘤、皮肤病等30多种外科疾病。在“疽病”下，有“骨疽倍白蔹，肉疽（倍）黄芪，肾疽倍芍药”之说，这样针对不同的疾病，更换药物，调整剂量，可视为"辨证论治”的萌芽。并以“水银、谷汁而傅（敷）之”治皮肤病；用醇酒止痛和消毒，如“犬所齧，令无痛及易瘳方：令〔齧〕者卧，而令人以酒，财沃其伤。”这是世界上最早将水银和酒用作药物的记录。此外还记录了治疗痔疮的具体方法，如用小绳结扎“牡痔”，用地胆等药外敷“牡痔”，用滑润的“铤”作为检查治疗漏管的探针等。这说明，当时已有较高的外科治疗水平。
 
 ### 二、形成
 
