update ok/bc/bc14-0.0.5.0.0.md. 原文为：音皮鸱，而非：音皮鸭。

--- a/ok/bc/bc14-0.0.5.0.0.md
+++ b/ok/bc/bc14-0.0.5.0.0.md
@@ -2,7 +2,7 @@
 
  
 
-【原文】  **鸡肫皮，一名鸡内金，一名肶胵，音皮鸭。甘平性涩，鸡之脾也。能消水谷，除热止烦。通小肠、膀胱。治泻痢便数，遗溺，溺血，崩带肠风，膈消反胃，小儿食疟。男用雌，女用雄。**
+【原文】  **鸡肫皮，一名鸡内金，一名肶胵，音皮鸱。甘平性涩，鸡之脾也。能消水谷，除热止烦。通小肠、膀胱。治泻痢便数，遗溺，溺血，崩带肠风，膈消反胃，小儿食疟。男用雌，女用雄。**
 
 **鸡矢醴微寒。下气消积，利大小便，《内经》用治蛊胀**。<small>腊月取雄鸡屎白收之，醋和涂蚯蚓、蜈蚣咬毒。合米炒治米癥。</small>
     
