--- a/ok/bc/bc14-0.0.6.0.0.md
+++ b/ok/bc/bc14-0.0.6.0.0.md
@@ -1,6 +1,6 @@
 ### 莱   菔(莱菔子)
 
-【原文】 **辛甘属土。生食升气，熟食降气。宽中化痰，散瘀消食**。<small>朱丹溪曰：气升则食自降。</small>**治吐血衄血，咳嗽吞酸。利二便，解酒毒，制面毒豆腐积**。<small>昔有人病，梦红裳女子引入宫殿，小姑歌曰：五灵楼阁晓玲珑，天府由来是此中；惆怅闷怀言不尽，一丸莱菔火君宫。一道士曰：此犯大麦毒也。女子心神，小姑脾神，医经莱菔制面毒，遂以药并莱菔治之，果愈。腐浆见莱菔则难收</small>**生捣治噤口痢，止消渴，涂跌打火伤。多食渗血，故白人髭髪**。<small>服何首乌、地黄者忌之。生姜能制其毒。夏月食其菜数斤，秋不患痢；冬月以莱叶摊屋瓦上，任霜雪打压，至春收之，煎汤饮；治痢得效。有人避难入石洞中，贼烧烟熏之，口含莱菔一块，烟不能毒。嚼汁濡水饮之亦可。王荆公患偏头痛，捣莱菔汁，仰卧，左痛注右鼻，右痛注左鼻，或两鼻齐注，数十年之患，数注而愈。</small>
+【原文】 **辛甘属土。生食升气，熟食降气。宽中化痰，散瘀消食**。<small>朱丹溪曰：气升则食自降。</small>**治吐血衄血，咳嗽吞酸。利二便，解酒毒，制面毒豆腐积**。<small>昔有人病，梦红裳女子引入宫殿，小姑歌曰：五灵楼阁晓玲珑，天府由来是此中；惆怅闷怀言不尽，一丸莱菔火君宫。一道士曰：此犯大麦毒也。女子心神，小姑脾神，医经莱菔制面毒，遂以药并莱菔治之，果愈。腐浆见莱菔则难收</small>**生捣治噤口痢，止消渴，涂跌打火伤。多食渗血，故白人髭髪**。<small>服何首乌、地黄者忌之。生姜能制其毒。夏月食其莱数斤，秋不患痢；冬月以莱叶摊屋瓦上，任霜雪打压，至春收之，煎汤饮；治痢得效。有人避难入石洞中，贼烧烟熏之，口含莱菔一块，烟不能毒。嚼汁濡水饮之亦可。王荆公患偏头痛，捣莱菔汁，仰卧，左痛注右鼻，右痛注左鼻，或两鼻齐注，数十年之患，数注而愈。</small>
 
 **莱菔子，辛入肺，甘走脾，长于利气。生能升，熟能降，升则吐风痰，散风寒，宽胸膈，发疮疹；降则定痰喘咳嗽，调下痢后重，止内痛**。<small>皆利气之功。朱丹溪曰：莱菔子治痰，有冲墙倒壁之功。《食医心镜》：研汤煎服，治气嗽痰喘吐脓血。</small>**炒用**。
 
