--- a/ok/bc/bc14-0.0.8.0.0.md
+++ b/ok/bc/bc14-0.0.8.0.0.md
@@ -3,7 +3,7 @@
 | 药名   | 性味          | 归经                 | 功效                        | 主治                                                 | 用量                         | 备注                   |
 | ------ | ------------- | -------------------- | --------------------------- | ---------------------------------------------------- | ---------------------------- | ---------------------- |
 | 山楂   | 酸、甘、微温  | 脾、胃、 肝          | 消食化积，   活血散瘀       | 1、   食滞不化、肉积不消   2、   产后瘀滞腹痛        | 10-15 克                     | 炒炭止泻痢             |
-| 麦芽   | 甘、平        | 脾、胃               | 消食和中，回乳消胀          | 1、吸食积不化 2、乳汁郁积、乳房胀痛                  | 10-15 克， 大剂量至30—120 克 | 炒用消食，生用回乳     |
+| 麦芽   | 甘、平        | 脾、胃               | 消食和中，回乳消胀          | 1、食积不化 2、乳汁郁积、乳房胀痛                  | 10-15 克， 大剂量至30—120 克 | 炒用消食，生用回乳     |
 | 榖芽   | 甘、平        | 脾、胃               | 消食和中，健脾开胃          | 食积不化、消化不良                                   | 10—15克                      | 生用养胃，炒用消食     |
 | 神曲   | 甘、辛、温    | 脾、胃               | 消食开胃                    | 饮食积滞                                             | 10---15克                    | 生用入丸 剂，炒用消 食 |
 | 建曲   |               |                      | 消食化滞，发散风寒          | 食滞不化,或兼感风寒                                  | 6-10克                       |                        |
