--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -8,11 +8,7 @@
 
 绿色的线为清，黑色的线为浊。虚线代表循环使用的水。
 
-浏览原图
-
-
-
-![](img/%E6%B4%A5%E6%B6%B2%E4%BB%A3%E8%B0%A2.jpg)
+<img src="img/%E6%B4%A5%E6%B6%B2%E4%BB%A3%E8%B0%A2.jpg" style="zoom: 80%;" />
 
 #### 1.2、水的吸收过程：
 
@@ -26,7 +22,7 @@
 
 #### 1.3、水的循环过程：
 
-脾将水液以气雾的状态上升到肺。肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的宣发作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为肃降。
+脾将水液以气雾的状态上升到肺。肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的**宣发**作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为**肃降**。
 
 三焦为水液通道，类似大楼里的水管和水蒸气的通道。
 
@@ -58,8 +54,6 @@
 >
 > 《中医药学概论-藏象-三焦》
 
-
-
 > 水有清浊，清者上升，浊者下降。清中有浊，浊中有清。
 >
 > **上升于肺之水，为清**。
@@ -78,17 +72,15 @@
 >
 > 《黄帝内经讲解-藏象学说-肾为水脏、主津液代谢》
 
-
-
-> **中焦亦并胃中，出上焦之后（1），此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉，乃化而为血（2），以奉生身，莫贵于此，故独得行于经隧，命曰营气（3）。**
+> **中焦亦并胃中，出上焦之后，此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉，乃化而为血，以奉生身，莫贵于此，故独得行于经隧，命曰营气。**
 >
 > **中焦**受纳水谷，并对水谷进行消化，泌别糟粕，**蒸化津液**，化生精微，**向上转输于肺脉**。水谷所化生的**精微与津液**相和合，乃化生为血液。
 >
-> **下焦者，别回肠，注于膀胱而渗入焉（1）。故水谷者，常并居者胃中，成糟粕，而俱下于大肠，而成下焦（2），渗而俱下，济泌别汁，循下焦而渗入膀胱焉（3）。**
+> **下焦者，别回肠，注于膀胱而渗入焉。故水谷者，常并居者胃中，成糟粕，而俱下于大肠，而成下焦，渗而俱下，济泌别汁，循下焦而渗入膀胱焉。**
 >
 > 回肠，包括小肠的下端和大肠的上端，在脐部向左回曲环绕，象树叶一样重迭而下，回行环绕，有十六个弯曲。从部位言，下焦指胃下口以下，包括大小肠、肝、肾、膀胱等。从功能言，水谷受盛于中焦胃，然后转输下焦小肠，进一步消化吸收，糟粕别行于回肠，然后排出体外，**水液也在回肠别渗于膀胱**。
 >
-> 其次，水液代谢的平衡，虽然必须赖肺、脾、肾、胃、大小肠、膀胱等许多脏腑共同发挥输布，调节水液的功能才能完成，但**必须以三焦为通道**，才能进行
+> 其次，水液代谢的平衡，虽然必须赖肺、脾、肾、胃、大小肠、膀胱等许多脏腑共同发挥输布，调节水液的功能才能完成，但**必须以三焦为通道**，才能进行。
 >
 > 《黄帝内经讲解-藏象学说-三焦的部位和功用》
 
@@ -98,7 +90,7 @@
 >
 > 《黄帝内经讲解-藏象学说-津液的生成和功用》
 
-> **饮入于胃**，游溢精气，**上输于脾**（1），脾气散精，**上归于肺**，**通调水道**，**下输膀胱**。水精四布，五经并行（2）。合于四时五藏阴阳，揆度以为常也(3)。
+> **饮入于胃**，游溢精气，**上输于脾**，脾气散精，**上归于肺**，**通调水道**，**下输膀胱**。水精四布，五经并行。合于四时五藏阴阳，揆度以为常也。
 >
 > 肺朝百脉，水精布散，参与代谢，最终**回流到肺的为清中之浊**。然后依靠肺气的肃降作用，**向下输送到膀胱**。再经肾中阳气的蒸化，清浊分离，**浊中之清者复归于肺**，然后输注全身。**浊中之浊者变为尿液**，排出体外。所以**水液的输布虽然是一个几乎所有脏腑都参与**的复杂过程，但与肺、脾、肾三脏的关系尤为密切。
 >
@@ -116,7 +108,7 @@
 
 目得肝血的濡养，而能视物，肝血中的津液满溢，则双目润泽。如情志失常，肝气上逆，迫液外泄而为泪，所以泪为肝液所化。
 
-#### 2.2、涕：
+#### 2.2、涕
 
 五藏化液，肺为涕
 
@@ -152,7 +144,7 @@
 >
 > 《黄帝内经讲解-藏象-肾为水脏、主津液代谢》
 
-#### 2.7髓
+#### 2.7、髓
 
 水谷所化津液内走骨空者为“髓”，含骨髓、脊髓和脑髓。
 
@@ -164,17 +156,17 @@
 
 泣、涕、涎、唾、尿、汗是津液的外在表现，因此中医通过观察这些物质的状态来判断人体内部津液的状态。若这类体液偏粘稠混浊则代表体内对应部位的津液偏热，若偏稀薄清冷则代表偏寒。
 
-> 水液浑浊，皆属于热（18）。诸病水液，澄彻清冷，皆属于寒（19）
+> 水液浑浊，皆属于热。诸病水液，澄彻清冷，皆属于寒。
 >
-> 《素问-至真要大论》
+> ——《素问•至真要大论》
 
 比如有口粘腻、尿液混浊、鼻涕混浊等情况，皆可以考虑有热，反之考虑有寒。
 
-> **五藏化液（1），心为汗（2），肺为涕（3），肝为泪（4），脾为涎⑸，肾为唾，是谓五液（6）。**
+> **五藏化液，心为汗，肺为涕，肝为泪，脾为涎，肾为唾，是谓五液。**
 >
-> 《素问•宣明五气篇》
+> ——《素问•宣明五气篇》
 >
-> 〔讲解〕
+> **〔讲解〕**
 >
 > 本文从五脏化生五液的角度，论述了五脏与五液的关系，为临床诊断治疗五液异常，提供了理论依据。
 >
@@ -190,7 +182,7 @@
 >
 > （6）“唾”，是口液中较稠厚的部分。肾藏精，主水液，肾脉循喉咙，挟舌本，舌下廉泉、玉英两穴，为液出之通道。所以肾液可循肾脉上注于舌下，出廉泉、玉英而为唾，润泽口舌。上述的就是五脏化生五液的情况。
 >
-> 〔临证意义〕
+> **〔临证意义〕**
 >
 > 五液为五脏精液所化，所以五液的异常表现，常可反映有关脏器的病变。如心阳不足，失于敛摄，心液不藏，多见自汗；心之阴血不足，血不养心，神气浮越，心液外泄而盗汗，所以汗证应注意从心进行辨证施治。
 >
@@ -222,9 +214,9 @@
 
 再如膀胱有蒸发水液上升的功能，如果受到干扰，此功能失常，可使膀胱水液停留，人出现异常的渴，喝水不解渴，且小便不正常的症状，可以使用五苓散、猪苓汤等方剂。
 
-> **若脉浮，小便不利，微热，消渴(2)者，五苓散(3)主之。[71]**...
+> **若脉浮，小便不利，微热，消渴者，五苓散主之。**...
 >
-> "小便不利"、"消渴”，则是...膀胱气化不利之证。...水邪内蓄，则小便不利；津液不能输布上承，则见口渴，口渴思饮，而饮又不解渴，便名以"消渴”
+> “小便不利”、“消渴”，则是...膀胱气化不利之证。...水邪内蓄，则小便不利；津液不能输布上承，则见口渴，口渴思饮，而饮又不解渴，便名以“消渴”。
 >
 > 《伤寒论讲解-71条》
 
@@ -236,7 +228,7 @@
 
 #### 4.1、脾的位置？脾切除人依然能活？
 
-现在解剖学的脾是西医传入之后，将解剖学发现的一个器官与传统中医中脾的名称对应的。从功能看，脾的功能是从胃中吸收营养，并将营养传递给其他器官。解剖学发现的脾不能完全和传统中医的脾对应。
+现在解剖学的脾是西医传入之后，将解剖学发现的一个器官与传统中医中脾的名称对应的。从功能看，脾的功能是从胃中吸收营养，并将营养传递给其他器官。**解剖学发现的脾不能完全和传统中医的脾对应**。
 
 有学者研究传统中医的脾可能包含现在解剖发现的脾脏和胰脏。
 
@@ -248,14 +240,15 @@
 >
 > 《中医药学概论-藏象-三焦》
 
-> 自《内经》以来，历代对三焦的形态、部位及功能**多有争议**。对三焦的解剖形态的认识，历史上有“有名无形”和“有名有形”之争。但从《内经》的论述来看，三焦属六腑之一，是分布于胸腹腔的一个大腑。如《素问•六节脏象论》说：“脾、胃、大肠、小肠、三焦、膀胱者，仓廪之本，营之居也，名曰器，能化糟粕，转味而入出者也。”李士材注：“器者，譬诸盛物之器也，胃受五谷，名之曰入，脾与大小肠三焦膀胱，皆主出也。”三焦与脾、胃、大小肠、膀胱并称为器，所以三焦应当也是有形的脏器。《灵枢•经脉》说：“三焦，手少阳之脉，起于小指次指之端，上出两指之间，循手表腕，出臂外两骨之间，上贯肘，循臑外，上肩而交出足少阳之后，入缺盆，布膻中，散络心包，下膈，循属三焦。”又“心主，手厥阴心包络之脉，起于胸中，出属心包络，下膈、历络三焦。”三焦手少阳之脉，由肩部向前入缺盆，布于膻中，散络心包，贯穿膈肌，依次联属上、中、下三焦。手厥阴心包经起于胸中，出属心包络，向下横穿膈肌，也依次联络上、中、下三焦，可见**三焦是一分布于横膈上下的有形大腑，而且经手少阳与手厥阴之脉与心包相连属，正如张景岳所说：“三焦者，确有一腑，盖脏腑之外，躯壳之内，包罗诸脏，一腔之大腑也。‘’**
+> 自《内经》以来，历代对三焦的形态、部位及功能**多有争议**。对三焦的解剖形态的认识，历史上有“有名无形”和“有名有形”之争。但从《内经》的论述来看，三焦属六腑之一，是分布于胸腹腔的一个大腑。如《素问•六节脏象论》说：“脾、胃、大肠、小肠、三焦、膀胱者，仓廪之本，营之居也，名曰器，能化糟粕，转味而入出者也。”李士材注：“器者，譬诸盛物之器也，胃受五谷，名之曰入，脾与大小肠三焦膀胱，皆主出也。”三焦与脾、胃、大小肠、膀胱并称为器，所以三焦应当也是有形的脏器。《灵枢•经脉》说：“三焦，手少阳之脉，起于小指次指之端，上出两指之间，循手表腕，出臂外两骨之间，上贯肘，循臑外，上肩而交出足少阳之后，入缺盆，布膻中，散络心包，下膈，循属三焦。”又“心主，手厥阴心包络之脉，起于胸中，出属心包络，下膈、历络三焦。”三焦手少阳之脉，由肩部向前入缺盆，布于膻中，散络心包，贯穿膈肌，依次联属上、中、下三焦。手厥阴心包经起于胸中，出属心包络，向下横穿膈肌，也依次联络上、中、下三焦，可见**三焦是一分布于横膈上下的有形大腑，而且经手少阳与手厥阴之脉与心包相连属，正如张景岳所说：“三焦者，确有一腑，盖脏腑之外，躯壳之内，包罗诸脏，一腔之大腑也。”**
 >
 > 就部位而言，三焦为一腔有形的大腑。上焦“出于胃上口，并咽以上贯膈而布胸中”，是指胃上口以上的胸中部分，心与肺居其中。中焦在膈下胃腑所在部位，脾与胃居于内。下焦在中焦以下，容纳肝、肾、大小肠、膀胱诸脏器。心肺受上焦所宣布的元气，才能宣发输布水谷精微，脾胃受中焦元气，才能腐熟运化水谷，蒸化气血津液。肾、大小肠、膀胱赖下焦元气的气化作用，才能灌渗水液，泌别清浊，外泄二便。其次，水液代谢的平衡，虽然必须赖肺、脾、肾、胃、大小肠、膀胱等许多脏腑共同发挥输布，调节水液的功能才能完成，但必须以三焦为通道，才能进行。综上所述可见，三焦是一个有形的大腑，分别容纳五脏六腑，三焦功能协同所容纳脏腑共同完成一定的机能活动，三焦的功能与其受纳脏腑的功能关系密切，不可分割。《医学入门》指出：“心肺若无上焦，何以宗主营卫，脾胃若无中焦，何以熟腐水谷，肝肾若无下焦，何以疏决津液。
 >
 > 《黄帝内经讲解-藏象学说-三焦的部位和功能》
 
-## 题目
+### 题目
 
-1. 请根据津液代谢图回答本问题：水饮到达胃后，水中之清在---的作用下，上升到肺，清中之清通过肺的宣发作用到达---，清中之浊通过肺的肃降作用，由----水道到达全身。身体使用后的水为浊，浊水回归到肾，经过肾的过滤，浊中之清通过三焦水道上到肺，重新循环。浊中之浊，由----排除体外。
-2. 膀胱接收到的浊水，再经---中阳气的蒸化，清浊分离，**浊中之清者复归于----**，然后输注全身。**浊中之浊者变为尿液**，排出体外。
-
+1. 请根据**津液代谢图**回答本问题：
+   水饮到达胃后，水中之清在 __ __ 的作用下，上升到肺，清中之清通过肺的宣发作用到达 __ __ ，清中之浊通过肺的肃降作用，由 __ __ 水道到达全身。
+2. 身体使用后的水为浊，浊水回归到肾，经过肾的过滤，浊中之清通过三焦水道上到肺，重新循环。浊中之浊，由 __ __ 排出体外。
+3. 膀胱接收到的浊水，再经 __ __ 中阳气的蒸化，清浊分离，**浊中之清者复归于 __ __ **，然后输注全身。**浊中之浊者变为尿液**，排出体外。
