--- a/ok/rm/rm03-0.3.0.0.0.md
+++ b/ok/rm/rm03-0.3.0.0.0.md
@@ -35,19 +35,19 @@ graph TB
 
 关于血的生成，宏观上来说，是人的脾胃从饮食中吸收的精华物质与津液相合，形成了血。
 
-> 血液主要来源于水谷精微，而水谷精微的化生，有赖于脾胃的运化，所以说脾胃为气血生化之源。《灵枢·决气》说：“**中焦受气取汁，变化而赤，是谓血**”。就是说**中焦脾胃**所化生的精微物质是生成血的基本物质。
+> 血液主要来源于水谷精微，而水谷精微的化生，有赖于脾胃的运化，所以说脾胃为气血生化之源。《灵枢•决气》说：“**中焦受气取汁，变化而赤，是谓血**”。就是说**中焦脾胃**所化生的精微物质是生成血的基本物质。
 >
 > 《中医药学概论-藏象-血的生成》
 
 更具体而言，内经提到水谷精微以气态的形式注入肺脉而化生为血。
 
-> 中焦亦并胃中，出上焦之后，此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉乃化而为血，以奉生身，莫贵于此，故独得行于经隧，命曰营气
+> 中焦亦并胃中，出上焦之后，此所受气者，泌糟粕，蒸津液，化其精微，上注于肺脉乃化而为血，以奉生身，莫贵于此，故独得行于经隧，命曰营气。
 >
-> 《灵枢·营卫生会》：
+> ——《灵枢•营卫生会》
 
-> 营气者，泌其津液，注之于脉，化以为血
+> 营气者，泌其津液，注之于脉，化以为血。
 >
-> 《灵枢·邪客》
+> ——《灵枢•邪客》
 
 此外，精血互转，所以精也可以转化为血。
 
@@ -105,7 +105,7 @@ graph TB
 
 血是精神活动的物质基础，血的失衡，包括血虚、血热、血瘀等，可以造成精神失常。
 
-> 此外，**血是人体精神活动**的主要物质基础。《灵枢·本神》说：“心藏脉，脉舍神。肝藏血，血舍魂”。都说明血与精神活动密切相关。故若血虚、血热或血瘀，均可出现不同程度的精神情志失常的病变。轻则失眠多梦，烦躁，重则神志恍忽，惊悸不安，或谵语、狂妄、昏迷不语。
+> 此外，**血是人体精神活动**的主要物质基础。《灵枢•本神》说：“心藏脉，脉舍神。肝藏血，血舍魂”。都说明血与精神活动密切相关。故若血虚、血热或血瘀，均可出现不同程度的精神情志失常的病变。轻则失眠多梦，烦躁，重则神志恍忽，惊悸不安，或谵语、狂妄、昏迷不语。
 >
 > 《中医药学概论-藏象-血的功能》
 
@@ -119,8 +119,8 @@ graph TB
 >
 > 《中医药学概论-气血津液的相互关系》
 
-## 题目：
+### 题目：
 
-1. 血的产生：水谷精微注入---脉而化生为血，---血互转也可以产生血。
-2. 血的运行以---为基本动力、---为辅助动力。---主血量的调节。---主约束血在脉道中运行而不溢出脉外。
-
+1. 血的产生：
+   水谷精微注入 __ __ 脉而化生为血， __ __ 血互转也可以产生血。
+2. 血的运行以 __ __ 为基本动力、 __ __ 为辅助动力。 __ __ 主血量的调节。 __ __ 主约束血在脉道中运行而不溢出脉外。
