--- a/ok/yk/yk0zl06-0.5.2.0.0.md
+++ b/ok/yk/yk0zl06-0.5.2.0.0.md
@@ -18,7 +18,7 @@
 
 血轮两眦，内应于心。其病变多与心和小肠有关。
 
-两毗赤脉多属心火。赤脉粗大虬曲，颜色深红，为实火或血瘀；赤脉纤细隐现，色泽淡红，多为虚火。
+两眦赤脉多属心火。赤脉粗大虬曲，颜色深红，为实火或血瘀；赤脉纤细隐现，色泽淡红，多为虚火。
 
 眦部渐生胬肉，红筋密布，多属心肺风热，经络瘀滞。
 
