--- a/ok/yk/yk0zl06-0.5.2.0.0.md
+++ b/ok/yk/yk0zl06-0.5.2.0.0.md
@@ -60,7 +60,7 @@
 
 水膜内面有沉着物，状似尘埃粉末，或见神水不清，多属肝胆热毒兼有瘀滞；病变久长，多系余邪未清。
 
-黄仁肿胀，纹理不清，多因肝胆湿热内攻；若黄仁粗厚，色暗无华，多为肝肾受损；黄仁上赤脉丛生，多为肝经瘀热；若黄液上冲，多为牌胃实火或肝胆热毒上燔。
+黄仁肿胀，纹理不清，多因肝胆湿热内攻；若黄仁粗厚，色暗无华，多为肝肾受损；黄仁上赤脉丛生，多为肝经瘀热；若黄液上冲，多为脾胃实火或肝胆热毒上燔。
 
 若病情反复，经年不愈，多因肝阴不足，挟有伏火。
 
