--- a/ok/yk/yk0zl06-0.5.4.0.0.md
+++ b/ok/yk/yk0zl06-0.5.4.0.0.md
@@ -28,7 +28,7 @@
 
 （三）辨肺和大肠证
 
-1.风寒束肺：多属感受风寒之邪而发，证见眼部微痒，胞脸微肿，白睛血络淡红，涕泪交流；全身伴有恶寒发热，鼻塞流清涕，咳嗽痰稀薄，苔薄白，脉浮紧。
+1.风寒束肺：多属感受风寒之邪而发，证见眼部微痒，胞睑微肿，白睛血络淡红，涕泪交流；全身伴有恶寒发热，鼻塞流清涕，咳嗽痰稀薄，苔薄白，脉浮紧。
 
 2.风热袭肺：多因外受风热之邪而致。证见羞明流热泪，胞睑红肿，白睛红赤，或白睛溢血，或白睛颗粒隆起，眵粘色黄；全身可见头痛身热，口渴或喘咳，或痰黄，舌苔黄，脉浮数。
 
