--- a/ok/bc/bc01-1.3.0.0.0.md
+++ b/ok/bc/bc01-1.3.0.0.0.md
@@ -28,7 +28,7 @@
 柴胡、葛根、升麻都有升阳发散作用，其退热之功惟柴胡为首，主散少阳半表半里之邪，以治寒热往来之证。又能疏解肝郁，
 治肝郁胁痛或月经不调等证。葛根是阳明经之主药，既可解肌退热，治表证发热，项背强痛，又能鼓舞脾胃之气而生津止渴，升阳止泻；升麻退热之力较差，而升举阳气之功最强，可用于透疹和阳气下陷的久泻久痢，脱肛等证。故柴胡、升麻常同用于中气下陷证，而葛根、升麻常并用于透疹。
 
-蔓荆子、淡豆豉发散之力均较弱。前者散头面风热，主治风热头痛，目赤多泪；后者以解表除烦为能，治外感轻证及热病心胸烦乱之证。浮萍长于发汗利水，可洽外感风热，风疹瘙痒，以及水肿多用。木贼能疏散风热，治风热目赤，翳膜遮晴的主药。
+蔓荆子、淡豆豉发散之力均较弱。前者散头面风热，主治风热头痛，目赤多泪；后者以解表除烦为能，治外感轻证及热病心胸烦乱之证。浮萍长于发汗利水，可治外感风热，风疹瘙痒，以及水肿多用。木贼能疏散风热，治风热目赤，翳膜遮晴的主药。
 
 
 
