update ok/gl/gl01-0.1.2.0.0.md. 去掉 *

--- a/ok/gl/gl01-0.1.2.0.0.md
+++ b/ok/gl/gl01-0.1.2.0.0.md
@@ -1,4 +1,4 @@
-### 二、阴阳的相互关系*
+### 二、阴阳的相互关系
 
 阴阳的相互关系，概括起来，可以归纳为对立和统一两个方面。阴阳学说认为自然界的一切都是由阴阳二气所构成。而事物的发展变化是阴阳二气对立统一的表现形式，即《素问·阴阳应象大论》所概括的：“阴阳者，天地之道也，万物之纲纪，变化之父母，生杀之本始，神明之府也”。这一观点，正是阴阳学说宝贵的唯物主义思想所在。
 
