update ok/gl/gl01-0.2.1.2.0.md. 去掉 *

--- a/ok/gl/gl01-0.2.1.2.0.md
+++ b/ok/gl/gl01-0.2.1.2.0.md
@@ -1,4 +1,4 @@
-#### （二）五行的相互关系*
+#### （二）五行的相互关系
 
 五行不是各自孤立、静止的，而是相互联系的统一的整体。在五行之间的相互关系中，最基本的原则是相生与相克。正是这种相生与相克，才维持了五行这一整体的相对协调平衡状态。无论是缺少相生或相克（即依存，制约），还是这种相生相克不能维持正常水平（太过或不及），五者之间的协调平衡都将遭到破坏，在自然界就要发生灾害，在人体就要发生疾病。而生克的太过与不及，则称之为乘侮胜复，正如张景岳所说：“造化之几（机），不可无生，亦不可无制，无生则发育无由，无制则亢而为害。生克循环，运行不息，而天地之道，斯无穷已”（《类经图翼·运气》）。
 
