update ok/gl/gl02-0.1.4.0.0.md. 去掉 *

--- a/ok/gl/gl02-0.1.4.0.0.md
+++ b/ok/gl/gl02-0.1.4.0.0.md
@@ -1,4 +1,4 @@
-### 四、奇恒之腑*
+### 四、奇恒之腑
 
 奇恒之腑包括脑、髓、骨、脉、胆、女子胞等六个脏器组织，它们在形态上多为中空而与腑相似，但在功能上主藏精气，与五脏的功能特点相似，故《素问·五脏别论》说：“此六者，地气之所生也，皆藏于阴而象于地，故藏而不泻，名曰奇恒之府”。奇恒之腑中除胆以外，与五脏都没有表里配合关系，亦无五行属性，这是不同于五脏六腑的又一特点。
 
