--- a/ok/gl/gl03-0.4.0.0.0.md
+++ b/ok/gl/gl03-0.4.0.0.0.md
@@ -64,6 +64,6 @@
 
 #### （六）手阳明与手太阴经别  六合
 
-手阳明经别  从手阳明经脉的[肩髃](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.15.md)穴处分出，进人项后柱骨，向下者走向大肠，归属于肺；向上者，沿喉咙，浅出于锁骨上窝，脉气仍归属于手阳明本经。（图30）
+手阳明经别  从手阳明经脉的[肩髃](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.15.md)穴处分出，进入项后柱骨，向下者走向大肠，归属于肺；向上者，沿喉咙，浅出于锁骨上窝，脉气仍归属于手阳明本经。（图30）
 
 手太阴经别  从手太阴经脉的[渊腋](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.3.3.22.md)处分出，行于手少阴经别之前，进入胸腔，走向肺脏，散布于大肠，向上浅出锁骨上窝，沿喉咙，合于手阳明的经别。（图30）
