--- a/ok/fjx/fjx11-0.4.0.0.0.md
+++ b/ok/fjx/fjx11-0.4.0.0.0.md
@@ -20,6 +20,6 @@
 
 若肾阴虚加龟板、冬虫夏草。
 
-若失眠心悸加酸枣仁、柏子仁．生龙骨、生牡蛎。
+若失眠心悸加酸枣仁、柏子仁、生龙骨、生牡蛎。
 
 〔文献摘录〕汪讱庵：“此手太阴足少阴药也（肺肾为子母之脏，故补肺者，多兼滋肾）。金不生水，火炎水干，故以二地助肾滋水退热为君。百合保肺安神，麦冬清热润燥，元参助二地以生水，贝母散肺郁而除痰，归、芍养血兼以平肝（肝火盛则尅金），甘、桔清金，成功上部（载诸药而上浮），皆以甘寒培元清本，不欲以苦寒伤生发之气也”。（《医方集解·补养之剂》）
