update ok/gl/gl03-0.8.0.0.0.md. 去掉*

--- a/ok/gl/gl03-0.8.0.0.0.md
+++ b/ok/gl/gl03-0.8.0.0.0.md
@@ -1,4 +1,4 @@
-## 第八节  经络系统的作用*
+## 第八节  经络系统的作用
 
 同脏腑一样，经络系统是人体重要的组成部份。对于经络系统各组成部分（十二经脉、奇经八脉、十二经别、十五别络、十二经筋、十二皮部）在人体中的作用，已分述于前几节之中。现将经络系统在人体中的总体作用，归纳概括如下：
 
