update ok/gl/gl03-0.9.1.0.0.md. 去掉*

--- a/ok/gl/gl03-0.9.1.0.0.md
+++ b/ok/gl/gl03-0.9.1.0.0.md
@@ -1,4 +1,4 @@
-### 一、指导临床辨证*
+### 一、指导临床辨证
 
 以经络学说为主要指导的辨证方法，称为经络辨证。作为临床辨证重要方法之一的经络辨证，早在《内经》时代（战国、秦、汉）就已应用于临床。后世医家又对经络辨证的理论和方法，及应用范围，不断地有所充实和发展。经络辨证同其它辨证方法（脏腑辨证、气血津液辨证、六经辨证、病因辨证、卫气营血辨证、三焦辨证、八纲辨证）一样，是做为综合辨证方法之一而运用于临床各科的，所以，不能孤立地运用经络辨证，而要和其它辨证方法结合运用。经络辨证主要是根据经络系统循行部位、各经连属的脏腑和官窍、经络的表里关系，经络的交接会合关系，以及各经系统的功能特点等，来确定病属哪一经脉系统，是一经独病还是数经合病。
 
