--- a/ok/fjx/fjx11-0.5.0.0.0.md
+++ b/ok/fjx/fjx11-0.5.0.0.0.md
@@ -2,7 +2,7 @@
 
 〔组成〕麦冬七升（35克） 半夏一升（5克） 人参三两（5克）甘草二两（3克） 粳米三合（5克） 大枣十二枚（10克）
 
-〔煎服法〕上六味，以水一斗二升，煮取六升，温服一升，日三夜一服（现代用法；水煎服）。
+〔煎服法〕上六味，以水一斗二升，煮取六升，温服一升，日三夜一服（现代用法：水煎服）。
 
 〔讲解〕本方是治疗胃虚有热，津液不足，虚火上逆而致肺叶枯焦的肺痿证。本方具有生津益胃，降逆下气的作用。方中麦门冬清胃中虚热而生肺胃津液，以滋阴润燥为君。辅以人参以益气生津而复气阴；甘草、大枣、粳米以益胃气而生津液；在上述益气生津药中，佐以半夏开通胃气，下气降逆，化其痰涎。各药相伍，使胃得以润，肺得以滋，虚火降，咽喉利，咳嗽气逆亦可自愈。
 
@@ -14,7 +14,7 @@
 
 〔附方〕加减麦门冬汤（《医学衷中参西录》），即麦门冬汤去粳米，加山药（以代粳米）、生杭芍、丹皮、桃仁，治妇女倒经。
 
-〔文献摘录〕张秉成：“此手太阴足阳明方也，夫肺与胃之气，皆以下行为顺，上行为逆，若肺胃阴伤，虚火内动，则气上逆矣，气上逆则痰涎随之，于是咽喉不利，所由来也，麦冬甘苦而寒，养肺胃之阴而降火，故以为君。然胃者肺之母气也，为水谷之海，后天之源，凡人有胃则生，无畏则死，故人之生气出胃中、虽阴虚火逆，不可纯用甘寒润降之品，有伤生气。故以参、甘、枣、米等药，甘温润泽，益气生阴，补而不燥，同麦冬即可大补中气，大生津液。而以半夏辛温之品，参赞其间，可以利咽喉，散结气，行痰降逆，以之为臣。然后立方之功，益彰其大耳。”（《成方便读·卷三》）
+〔文献摘录〕张秉成：“此手太阴足阳明方也，夫肺与胃之气，皆以下行为顺，上行为逆，若肺胃阴伤，虚火内动，则气上逆矣，气上逆则痰涎随之，于是咽喉不利，所由来也，麦冬甘苦而寒，养肺胃之阴而降火，故以为君。然胃者肺之母气也，为水谷之海，后天之源，凡人有胃则生，无胃则死，故人之生气出胃中，虽阴虚火逆，不可纯用甘寒润降之品，有伤生气。故以参、甘、枣、米等药，甘温润泽，益气生阴，补而不燥，同麦冬即可大补中气，大生津液。而以半夏辛温之品，参赞其间，可以利咽喉，散结气，行痰降逆，以之为臣。然后立方之功，益彰其大耳。”（《成方便读·卷三》）
 
 复习思考题
 
