update ok/gl/gl08-0.3.0.0.0.md. 去掉*

--- a/ok/gl/gl08-0.3.0.0.0.md
+++ b/ok/gl/gl08-0.3.0.0.0.md
@@ -1,4 +1,4 @@
-## 第三节  中药的炮制*
+## 第三节  中药的炮制
 
 炮制，又称“炮炙”，是中药在使用前或制成各种剂型前的加工过程。中药大多取用于生药，因为一般生药多含有杂质或不适用的部分；或具有毒性、烈性而不能直接服用；有些则易于变质；有的则生、熟有不同的作用。因此，要进行一定的加工处理，使其符合临床需要，这种加工处理的方法就是炮制。
 
