--- a/ok/gl/gl03-0.5.0.0.0.md
+++ b/ok/gl/gl03-0.5.0.0.0.md
@@ -40,7 +40,7 @@
 
 （13）任脉之别络名尾翳：从鳩尾（尾翳）穴处分出，自胸骨剑突下行，散布于腹部。
 
-（14）督脉之别络名[长强](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.1.md)：从[长强](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.1.md)穴处分出，挟脊柱两旁上行到项部，散布在头上；下行的络脉从肩胛部开始，向左右别走足大阳经，进人脊柱两旁的肌肉。
+（14）督脉之别络名[长强](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.1.md)：从[长强](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.1.md)穴处分出，挟脊柱两旁上行到项部，散布在头上；下行的络脉从肩胛部开始，向左右别走足太阳经，进人脊柱两旁的肌肉。
 
 （15）脾之大络名[大包](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.21.md)：从[大包](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.21.md)穴处分出，浅出于[渊腋](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.3.3.22.md)穴下三寸处，散布于胸胁部。
 
