update ok/gl/gl09-0.1.0.0.0.md. 去掉*

--- a/ok/gl/gl09-0.1.0.0.0.md
+++ b/ok/gl/gl09-0.1.0.0.0.md
@@ -1,4 +1,4 @@
-## 第一节  方剂的组成*
+## 第一节  方剂的组成
 
 在治法的指导下将药物组合成方剂，既可以通过相互促进而提高各单味药的疗效，又可以通过相互制约而消除或减缓药物的毒性和副作用。因此，方剂中各单味药的相互组合就要有一定的原则。但是，临床病证是复杂多变的，病人的体质、年龄、性别、居处环境等也各有差异。因此，在运用方剂时又应灵活掌握，加减变化，才能切合病情，达到预期效果。方剂组成上的这种原则性与灵活性相结合的特点，正是中医药学辨证论治思想的具体体现。
 
