--- a/ok/gl/gl03-0.6.0.0.0.md
+++ b/ok/gl/gl03-0.6.0.0.0.md
@@ -2,7 +2,7 @@
 
 ### 一、概述
 
-前以提及，经筋是十二经脉的延续，是十二经脉分布于筋肉的部分，所以称为经筋。经筋也有相应的十二个系统，即手足三阴三阳经筋。由于经筋是分布于筋肉之中的，主司筋肉的运动，所以经筋的作用，主要表现为筋肉的运动，其病变也反映为筋肉的病变。而筋肉的运动又控制着骨髂、关节、肢体的屈伸，因此，说经筋是“主束骨而利机关”《素问·痿论》。
+前以提及，经筋是十二经脉的延续，是十二经脉分布于筋肉的部分，所以称为经筋。经筋也有相应的十二个系统，即手足三阴三阳经筋。由于经筋是分布于筋肉之中的，主司筋肉的运动，所以经筋的作用，主要表现为筋肉的运动，其病变也反映为筋肉的病变。而筋肉的运动又控制着骨骼、关节、肢体的屈伸，因此，说经筋是“主束骨而利机关”《素问·痿论》。
 
 经筋分布的特点是：其循行部位不完全与十二经脉一致。经筋循行于人体浅层，不入内脏。经筋均起于四肢末端，并分布于四肢关节（包括肩、髀关节）、头面、胸腹、肌表。经筋有汇聚之处：如足三阳经筋，起于足趾，行于下肢外侧，上达于头面部；足三阴经筋，起于足趾，行于下肢内侧，上达于胸腹背；足三阴经筋和足阳明经筋还汇聚于阴器（小腹部）；手三阳经筋，起于手指，行于上肢外侧，上达于头面部；手三阴经筋，起于手指，行于上肢内侧，达于胸腹。前面已经讲过，经筋是一个系统，而不是一条，因此一个系统的经筋可分布于多处肌肉关节之中。脏象学说指出：肝主筋。而肝主筋是通过足厥阴经筋对诸系统经筋的联络实现的（“足厥阴之筋”“络诸筋”——《灵枢•经筋》）。从上述十二经筋分布来看，经筋是遍布于头面、胸腹、四肢，即周身。同时，足三阴三阳经筋交接于足趾；手三阴三阳交接于手指；手足三阳交接于头面；手足三阴交接于胸腹。这样就形成了一个十二经筋的整体系统。所以，有些经筋的病变（如强直、抽搐等）往往是全身性的。
 
