--- a/ok/yk/yk0zl07-0.2.1.0.0.md
+++ b/ok/yk/yk0zl07-0.2.1.0.0.md
@@ -6,7 +6,7 @@
 
 2.泻火解毒法：本法是用寒性药物，通过清热泻火解毒而消除火热邪毒的方法。主要适用外感火热之邪，或脏腑积热上攻的眼病，如胞肿如桃、疮疡疖肿、白睛混赤、黑睛溃陷、黄液上冲、瞳神紧小等症，常伴有疼痛拒按、羞明怕热、热泪如汤、眵多粘结及口渴、便秘、舌红、苔黄全身症。
 
-眼病热证较多，泻火解毒为常用之法，但临证要结合脏腑辨证，灵活运用，如邪传阳明，眼胞焮肿赤痛，口渴喜饮，大便燥结之閃实证，则宜合通腑泻热法；抱轮红赤，黑睛生翳，目珠疼痛，口苦脉弦数之肝火上攻证，则宜合清肝泻火法；眼痒赤烂、心烦溺赤而属心火上炎者，则宜清心泻火。
+眼病热证较多，泻火解毒为常用之法，但临证要结合脏腑辨证，灵活运用，如邪传阳明，眼胞焮肿赤痛，口渴喜饮，大便燥结之腑实证，则宜合通腑泻热法；抱轮红赤，黑睛生翳，目珠疼痛，口苦脉弦数之肝火上攻证，则宜合清肝泻火法；眼痒赤烂、心烦溺赤而属心火上炎者，则宜清心泻火。
 
 本法为寒凉直折之法，易损伤脾胃阳气，故不可久用，且应因人的体质不同而慎重选药；又因久用寒凉可致血脉凝滞，翳障难退，故黑睛疾患应用本法时，应掌握尺度，以免流弊。若属虚火，则忌用此法。
 
