--- a/ok/bc/bc06-0.0.11.0.0.md
+++ b/ok/bc/bc06-0.0.11.0.0.md
@@ -2,7 +2,7 @@
 
 [原文] **味辛微热。虎属金而制木，故啸则风生。追风健骨，定痛辟邪。治风痹拘挛疼痛，惊悸癫痫，犬咬骨鲠。**为末水服，犬咬敷患处。**以头骨胫骨良。**虎虽死，犹立不仆，其气力皆在前胫。时珍曰：凡辟邪疰，治惊痫风疟头风，当用头骨；治手足风，当用胫骨；治腰脊风，当用脊骨，各从其类也。
 
-**虎肚治反胃。**取生者，存滓秽勿洗，新瓦固煅存性为末，入平胃散一两，每服三钱效。昂按：虎肚丸宜于食隔，若寒隔、气隔、血隔、痰隔，恐难见功。
+**虎肚治反胃。**取生者，存滓秽勿洗，新瓦固煅存性为末，入平胃散一两，每服三钱效。昂按：虎肚丸宜于食膈，若寒膈、气膈、血膈、痰膈，恐难见功。
 
 **虎睛为散，竹沥下，治小儿惊痫夜啼。**
 
