--- a/ok/bc/bc06-0.0.12.0.0.md
+++ b/ok/bc/bc06-0.0.12.0.0.md
@@ -10,4 +10,4 @@
 
 近代研究，本品还有降低血压和阻止食物中类脂质吸收的作用，故可用于高血压，冠心病。也有配枙子、金钱草等治急性黄疸型传染性肝炎的报导。
 
-【 用祗用法】10一15克，煎汤或入丸散服。治痹证宜制用，疮痈湿疹宜生用。
+【 用量用法】10一15克，煎汤或入丸散服。治痹证宜制用，疮痈湿疹宜生用。
