update ok/hk/hk0zl08-0.1.0.0.0.md. ③没1〜2小时  没为浸

--- a/ok/hk/hk0zl08-0.1.0.0.0.md
+++ b/ok/hk/hk0zl08-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 取材：色宜鲜黄，质地宜轻。入水不沉，能粘手，但捏之不成块者为佳。
 
-加工：①先以薄荷煎浓汁，滤净。②把蒲黄浸入薄荷汁内，蒲黄与薄荷汁的比率为1：3。③没1〜2小时，经常搅拌不息。④滤去水，加榨而干。丢弃干的渣，用水。⑤沉淀24小时，去上面的水，用沉下的粉。⑥阴干。也可用烘箱。⑦干燥后，待用。
+加工：①先以薄荷煎浓汁，滤净。②把蒲黄浸入薄荷汁内，蒲黄与薄荷汁的比率为1：3。③浸1〜2小时，经常搅拌不息。④滤去水，加榨而干。丢弃干的渣，用水。⑤沉淀24小时，去上面的水，用沉下的粉。⑥阴干。也可用烘箱。⑦干燥后，待用。
 
 注意：通过这样制法，狼藉很大。所以未制品务宜多备。
 
