--- a/ok/bc/bc18-0.0.6.0.0.md
+++ b/ok/bc/bc18-0.0.6.0.0.md
@@ -6,6 +6,6 @@
 
 本品辛温，芳香而涩。入脾、胃、大肠经。辛可行气，温暖脾胃，涩可固脱，而有温脾开胃、涩肠止泻、行气止痛之功。故凡脾胃虚寒、气滞之脘腹胀痛、食少呕吐，及肠滑不固之久泻久痢等证，均视为要药。然涩肠助火之品，泻痢初起或挟有湿滞积热者忌用。	
 
-【临证应用】肉豆蔻用于脾胃虚寒，久泻不止，多与党参、 白术、肉桂、訶子等药同用，如养脏汤。治脾肾阳虚，五更泄泻， 可配补骨脂、吴茱萸、五味子等，如四神丸。若与木香、半夏同用，可治胃寒食少呕吐及气滞胸腙作痛等证。
+【临证应用】肉豆蔻用于脾胃虚寒，久泻不止，多与党参、 白术、肉桂、訶子等药同用，如养脏汤。治脾肾阳虚，五更泄泻， 可配补骨脂、吴茱萸、五味子等，如四神丸。若与木香、半夏同用，可治胃寒食少呕吐及气滞胸脘作痛等证。
 
 【用量用法】 3—10克，煎服。散剂1.5—3克。煨用以减其辛散之性，且能增强其固涩之功能。故泻痢不止者一般都煨用。
