--- a/ok/zjz/zjz03-0.1.0.0.0.md
+++ b/ok/zjz/zjz03-0.1.0.0.0.md
@@ -4,10 +4,10 @@
 
 〔目的要求〕
 
-掌握三棱针的操作方法、适应范围和注意事项。
+掌握三棱针的操作方法，适应范围和注意事项。
 
 
-三棱钟是由古代九针中的锋针发展而来的，古称锋针。针长约2寸，是一种针柄粗而圆、.针身呈三棱形、针尖锋利的针具 (图240)。一般应用于刺络放血。《素问•针解》说:“菀陈则除之者，出恶血也。”《灵枢•官针》也说：“络刺者，刺小络之血脉也。”络脉壅滞、血瘀不通的疾病，在人体特定部位的浅表血管， 放出少量血液，达到治疗目的。
+三棱针是由古代九针中的锋针发展而来的，古称锋针。针长约2寸，是一种针柄粗而圆、针身呈三棱形、针尖锋利的针具 (图240)。一般应用于刺络放血。《素问•针解》说:“菀陈则除之者，出恶血也。”《灵枢•官针》也说：“络刺者，刺小络之血脉也。”络脉壅滞、血瘀不通的疾病，在人体特定部位的浅表血管， 放出少量血液，达到治疗目的。
 
 ![](img/图240、241.jpg)
 
@@ -15,7 +15,7 @@
 
 右手拇、食两指持住针柄，中指扶住针尖部，露出针尖1〜2分许，以控制针刺深浅度，针刺时左手捏住指（趾）部，或夹持、舒张皮肤，右手持三棱针针刺（图241)。常用的刺法有下列几种：
 
-1.缓刺：用于肘窝、胭窝浅静脉放血。如[曲泽](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.1.3.3.md)、[委中](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.40.md)等穴，先用橡皮带在应刺穴位上端束扎，医者用右手持三棱针对准穴位或静脉胬起处，刺入1〜2分，然后将针退出，待黑色血出尽变为红赤色，可将橡皮带解开，用消毒棉球揉按针孔。
+1.缓刺：适用于肘窝、胭窝浅静脉放血。如[曲泽](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.1.3.3.md)、[委中](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.40.md)等穴，先用橡皮带在应刺穴位上端束扎，医者用右手持三棱针对准穴位或静脉胬起处，刺入1〜2分，然后将针退出，待黑色血出尽变为红赤色，可将橡皮带解开，用消毒棉球揉按针孔。
 
 2.点刺：又称速刺。适用于四肢末梢穴位或表浅静脉浅刺放血。用左手拇指、食指和中指捏紧应刺的部位或腧穴、右手持三棱针迅速刺入1〜2分，立即退针，然后用手挤压局部，使之出血。
 
@@ -27,7 +27,7 @@
 
 三棱针是在放血泻络时使用，故有活血消肿，开窍泄热，通经活络的作用，适用实证和热证。现就临床常见病症及其放血部位介绍如表12。
 
-表12、常见病症放血部位表
+表12.    常见病症放血部位表
 
 | 病症     | 放血部位                    | 刺法       | 备注            |
 | -------- | --------------------------- | ---------- | --------------- |
@@ -62,7 +62,7 @@
 
 ### 〔临床应用〕
 
-使用三棱针进行治疗时，首先要对针刺部位进行严密消毒， 并要检査针具是否锋利，刺入1〜2分深，以出血为度。出血时 不要按其针孔，任其血流，最初是紫色，待变鲜红色为度，一般不要超过10毫升。最后用干棉球揉按擦净针孔即可。根据不同病症可采用缓刺、点刺、挑刺、散刺等方法进行放血。
+使用三棱针进行治疗时，首先要对针刺部位进行严密消毒， 并要检査针具是否锋利，刺入1〜2分深，以出血为度。出血时不要按其针孔，任其血流，最初是紫色，待变鲜红色为度，一般不要超过10毫升。最后用干棉球揉按擦净针孔即可。根据不同病症可采用缓刺、点刺、挑刺、散刺等方法进行放血。
 
 复习思考题
 
