--- a/ok/zjz/zjz03-0.2.0.0.0.md
+++ b/ok/zjz/zjz03-0.2.0.0.0.md
@@ -1,4 +1,4 @@
-## 第二节皮肤针&
+## 第二节皮肤针
 
 〔自学时数〕1学时
 
@@ -6,11 +6,11 @@
 
 掌握皮肤针的操作方法，适应范围和注意事项
 
-皮肤针又名[梅花](https://www.gmzyjc.com/read/bc/bc11-0.0.20.0.0.md)针、七星针、是用5或7枚不锈钢针，集束固定在针柄的一端而成，用它在一定部位皮肤上进行叩打，以疏通经络，调节脏腑之气，而治疗疾病。《灵枢•官针》：“半刺者， 浅内而疾发针，无针伤肉，如拔毛状。”'扬刺者，正内一，傍内四 而浮之，以治寒气之博大者也。” “毛刺者，剌浮痹皮肤也。”皮肤 针是半剌、扬刺、毛刺等针法的发展。
+皮肤针又名[梅花](https://www.gmzyjc.com/read/bc/bc11-0.0.20.0.0.md)针、七星针、是用5或7枚不锈钢针，集束固定在针柄的一端而成，用它在一定部位皮肤上进行叩打，以疏通经络，调节脏腑之气，而治疗疾病。《灵枢•官针》：“半刺者， 浅内而疾发针，无针伤肉，如拔毛状。”“扬刺者，正内一，傍内四而浮之，以治寒气之博大者也。” “毛刺者，剌浮痹皮肤也。”皮肤针是半剌、扬刺、毛刺等针法的发展。 
 
 ### 一、操作方法
 
-针具和施术部位常规消毒，针具可在75%酒精中浸泡30分钟。用右手握针柄，以无名指、小指将针柄末端固定于小[鱼际](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.1.3.10.md) 处，一般针柄末端露出手掌后2～3厘米，以拇、中二指夹持针 柄，食指置于针柄中段上面（图243)。用腕力进行弹刺，使针尖 垂直叩打在皮肤上，并立即弹起，反复进行。
+针具和施术部位常规消毒，针具可在75%酒精中浸泡30分钟。用右手握针柄，以无名指、小指将针柄末端固定于小[鱼际](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.1.3.10.md)处，一般针柄末端露出手掌后2～3厘米，以拇、中二指夹持针 柄，食指置于针柄中段上面（图243)。用腕力进行弹刺，使针尖 垂直叩打在皮肤上，并立即弹起，反复进行。
 
 ![](img/图243.jpg)
 
@@ -26,7 +26,7 @@
 
 皮肤针的刺激部位比较广泛，大体可分为三类：
 
-1.常规刺激部位：一般均以背部脊柱侧为主?并按不同疾病配用其他相应部位。
+1.常规刺激部位：一般均以背部脊柱侧为主，并按不同疾病配用其他相应部位。
 
 2.局部刺激部位：在病区及四周有关炎位进行叩刺，或环形叩刺。
 
@@ -40,7 +40,7 @@
 
 2.头痛、偏头痛：重点叩刺后项部、头部。头痛可取后头、 项部以及疼痛部位和远端有关经脉循行线上的敏感部位；偏头痛可取后项部，痛侧头部和有关经脉循行的敏感部位。
 
-3 .胸痛、胁痛：重点叩刺第1～12胸椎两侧，特别是[膈俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.17.md)、 [肝俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.18.md)处。胸痛可按疼痛部位及其上下沿肋骨走行叩刺；胁痛除上 述重点部位外，可配合[支沟](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.2.3.6.md)、[太冲](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.4.3.3.md)穴。
+3 .胸痛、胁痛：重点叩刺第1～12胸椎两侧，特别是[膈俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.17.md)、 [肝俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.18.md)处。胸痛可按疼痛部位及其上下沿肋骨走行叩刺；胁痛除上述重点部位外，可配合[支沟](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.2.3.6.md)、[太冲](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.4.3.3.md)穴。
 
 4.斑秃：重点叩刺后项、脱发区、腰、骶部、[太渊](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.1.3.9.md)、[内关](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.1.3.6.md)， 阳性物处。兼头痛、口干，心烦加刺胸椎8〜10两侧及[风池](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.3.3.20.md)。心悸多梦，失眠加刺胸椎5〜7两侧及[神门](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.2.3.7.md)、[大椎](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.14.md)。
 
@@ -48,7 +48,7 @@
 
 6.神经性皮炎：重点叩刺后项部，骶部和患部、阳性物处。
 
-7.近视：重点叩刺后项部、眼区、颞部。在叩打时可在太阳、攒‘竹、[四白](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.2.md)、[风池](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.3.3.20.md)多叩刺几针。	
+7.近视：重点叩刺后项部、眼区、颞部。在叩打时可在太阳、攒竹、[四白](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.2.md)、[风池](https://www.gmzyjc.com/read/zjs/zjs3.1.9-12-0.0.3.3.20.md)多叩刺几针。	
 
 8.口眼㖞斜：重点叩刺颜面局部，以[攒竹](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.2.md)、瞳子髎  、[地仓](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.4.md)、[颊车](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.6.md)部为主，并配合[合谷](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.4.md)或敏感点。
 
@@ -58,7 +58,7 @@
 
 ### 四、注意事项
 
-1.针尖要平齐、无钩，叩刺时针尖必须垂直而下、以减少 疼痛。针柄与针头联结处必须牢固，以防叩刺时滑动。
+1.针尖要平齐、无钩，叩刺时针尖必须垂直而下、以减少疼痛。针柄与针头联结处必须牢固，以防叩刺时滑动。
 
 2.针具及叩刺部位的皮肤应消毒，叩刺后的局部皮肤，如有出血者，应进行清洁及消毒，以防感染。
 
@@ -68,7 +68,7 @@
 
 ### 〔临床应用〕
 
-皮肤针治疗疾病，虽然不限于腧穴，也不是单纯“以痛为腧”。 而是祖国医学整体观作为理论依据的。《素问•皮部论》指出：“凡 十二经络脉者，皮之郎也。是故百病之始生也，必先于皮毛。”说明十二皮部同十二经脉、十二脏腑有密切关系。应用皮肤针叩击皮部，可疏通经络脏腑之气，从而起到调整机体的作用。
+皮肤针治疗疾病，虽然不限于腧穴，也不是单纯“以痛为腧”。 而是祖国医学整体观作为理论依据的。《素问•皮部论》指出：“凡十二经络脉者，皮之部也。是故百病之始生也，必先于皮毛。”说明十二皮部同十二经脉、十二脏腑有密切关系。应用皮肤针叩击皮部，可疏通经络脏腑之气，从而起到调整机体的作用。
 
 皮肤针在操作时，持针不要过紧或过松，如果握针太紧会使腕关节肌肉紧张，影响操作；如果握针太松，会使针身左右摆动， 造成疼痛或出血。叩打皮肤针时速度要均匀，防止快慢不一，用力不匀地乱刺。针尖起落要垂真，即将针垂直刺下，垂直提起，如此反复操作。针刺部位要准确，按预定应刺部位下针，针与针之间的距离要相等，一般针距在1～1.5厘米左右。
 
@@ -78,7 +78,7 @@
 
 复匀思考题
 
-1.皮肤针如何操作?能治疗哪些疾病？
+1.皮肤针如何操作？能治疗哪些疾病？
 
 2.使用皮肤针治病时应注意什么？
 
