update ok/fjx/fjx01-0.1.0.0.0.md. 〔组成〕 〔煎服法〕等  下的正文 不用另起一行
恐过汗伤阳。 后加）

为解肌解表祖方。后应另起一段

但发热不恶寒, ,改为，

活血止痛之功,其解表攻里之效 ,改为， 其解表 改为 具解表

按之则痛减， ，改为；

最重要的有四个加减法既； ；改为：

--- a/ok/fjx/fjx01-0.1.0.0.0.md
+++ b/ok/fjx/fjx01-0.1.0.0.0.md
@@ -1,23 +1,18 @@
 ## 桂枝汤《伤寒论》
 
-### 〔组成〕
+### 〔组成〕 桂枝三两（10克）  芍药三两(10克）  甘草炙二两（6克） 生姜三两（10克）  大枣十二枚（五枚）
 
+### 〔煎服法〕 原方五味，㕮咀三味，以水七升，微火煮取三升，去滓适寒温，服一升。服已须臾，啜热稀粥一升余，以助药力。温复令一时许，遍身漐漐微似有汗者益佳，不可令如水流漓，病必不除。若一服汗出病瘥，停后服，不必尽剂；若不汗，更服，依前法；又不汗，服后小促其间，半日许令三服尽；若病重者，一日一夜服，周时观之。服一剂尽，病证犹在者，更作服；若汗不出，乃服二、三剂。禁生冷、粘滑、肉、面、五辛、酒酪、恶臭等物。（水煎服，服后再喝少量热稀粥或热开水，借谷气以助药力，兼益胃气，以鼓邪外出。盖被取微汗。但汗出不宜过多，恐过汗伤阳。）
 
-桂枝三两（10克）  芍药三两(10克）  甘草炙二两（6克） 生姜三两（10克）  大枣十二枚（五枚）
+### 〔讲解〕 本方主治外感风寒表虚证，为解肌解表祖方。
 
-### 〔煎服法〕
-原方五味，㕮咀三味，以水七升，微火煮取三升，去滓适寒温，服一升。服已须臾，啜热稀粥一升余，以助药力。温复令一时许，遍身漐漐微似有汗者益佳，不可令如水流漓，病必不除。若一服汗出病瘥，停后服，不必尽剂；若不汗，更服，依前法；又不汗，服后小促其间，半日许令三服尽；若病重者，一日一夜服，周时观之。服一剂尽，病证犹在者，更作服；若汗不出，乃服二、三剂。禁生冷、粘滑、肉、面、五辛、酒酪、恶臭等物。（水煎服，服后再喝少量热稀粥或热开水，借谷气以助药力，兼益胃气，以鼓邪外出。盖被取微汗。但汗出不宜过多，恐过汗伤阳。
-
-### 〔讲解〕
-本方主治外感风寒表虚证，为解肌解表祖方。
 外感风邪，邪正相搏于肌表，故见头痛、发热、脉浮；营卫不和，卫阳不能外固，则肌表疏松而恶风，营阴不能内守，故汗自出，脉缓；肺主气，外合皮毛，鼻为肺窍，风寒束于肌表，肺气因而不利，故鼻鸣。肺胃之气以下行为顺，肺气上逆，胃气亦因之上逆，故干呕。方中以桂枝为君，辛甘温能解肌去卫分之风，臣芍药甘寒能收，歛阴和营补营分之虚，使桂枝辛散而不致伤阴，芍药酸敛不致碍邪，一散一收，调和营卫，使表邪得解，里气以和。生姜辛温助桂枝行卫气，以去风，又能散寒止呕，大枣甘温助白芍以和营血，姜枣辛甘合用为佐，能行脾之津液而和营卫。炙甘草调和诸药扶正达邪以为使。诸药配伍，发中有补，散中有收，共收解肌发表，调和营卫之功。服药后再配合喝热稀粥以资汗源，而使遍身微似汗出，邪退病愈，此汗为“药汗”，原来自汗出乃为“病汗”，系营弱卫强所致。今营卫调和则原自汗出乃止。
 
-### 〔临证应用〕
-本方主冶风寒外束、营卫不和所致发热头痛、汗出恶风，鼻鸣干呕，脉浮缓或脉弱等症。以及杂病、病后、产后等因营卫不和，以致时而微寒，时而微热，汗出，脉缓等症。古人认为本方“外证得之为解肌和营卫；内证得之为化气和阴阳”。
+### 〔临证应用〕 本方主冶风寒外束、营卫不和所致发热头痛、汗出恶风，鼻鸣干呕，脉浮缓或脉弱等症。以及杂病、病后、产后等因营卫不和，以致时而微寒，时而微热，汗出，脉缓等症。古人认为本方“外证得之为解肌和营卫；内证得之为化气和阴阳”。
 
 本方重用桂枝，再加片姜黄、细辛、威灵仙能通痹止痛、祛风除湿，可治风寒湿痹痛。
 
-使用需要注意，风温病初起，但发热不恶寒,有汗而渴，咽红肿痛，舌红苔黄，脉数者禁用。古人有“桂枝下咽，阳盛则毙”之训。
+使用需要注意，风温病初起，但发热不恶寒，有汗而渴，咽红肿痛，舌红苔黄，脉数者禁用。古人有“桂枝下咽，阳盛则毙”之训。
 
 桂枝汤加附子名桂枝加附子汤，能温经助阳，固表止汗。主治发汗太过，汗出不止，恶风，小便难，四肢难以屈伸者。
 
@@ -25,7 +20,7 @@
 
 本方芍药加倍名桂枝加芍药汤，加强活血和络缓急止痛之效，主治肝脾不和腹部挛痛等证。夹热者可用赤芍、生草。
 
-本方倍芍药，加小剂量大黄名桂枝加大黄汤，增加通结破滞，活血止痛之功,其解表攻里之效，主治桂枝汤证兼大便燥结不通，腹部满痛者。按芍药之用有三：①和阴。②缓急。③利水。
+本方倍芍药，加小剂量大黄名桂枝加大黄汤，增加通结破滞，活血止痛之功，具解表攻里之效，主治桂枝汤证兼大便燥结不通，腹部满痛者。按芍药之用有三：①和阴。②缓急。③利水。
 
 本方少加芍药、生姜、并重用人参名为桂枝加芍药生姜人参汤，有和营养血、宣通阳气、益气和营之效，扶正祛邪并用，是为正扶主为之方。主治发汗太过，伤及气营，桂枝汤证仍在，但脉见沉迟者。
 
@@ -45,7 +40,7 @@
 
 本方去芍药之阴柔，生姜之辛散，以免牵制，重用茯苓，名苓桂甘枣汤，主治发汗后，脐下悸，欲作奔豚者。全方具通阳降逆，培土制水之效。
 
-本方倍芍药加饴糖名小建中汤，具温中补虚，缓急止痛之效。主治虚寒腹痛证：腹中时痛喜温喜按，按之则痛减，或虚劳心中悸动，虚烦不宁，面色无华，苔白，脉弦细弱；或阳虚发热，此方为理阳气之主方。如再加黄芪，名黄芪建中汤。主治小建中汤证兼有纳少时寒时热，气虚自汗，短气困倦，消瘦，脉虚无力不数及有操劳过度史，无阴虚里热者。如小建中汤加当归，名当归建中汤。主治产后虚羸不足，腹中疼痛不止；或少腹拘急，痛引腰背，不能饮食等营血内虚证。
+本方倍芍药加饴糖名小建中汤，具温中补虚，缓急止痛之效。主治虚寒腹痛证：腹中时痛喜温喜按，按之则痛减；或虚劳心中悸动，虚烦不宁，面色无华，苔白，脉弦细弱；或阳虚发热，此方为理阳气之主方。如再加黄芪，名黄芪建中汤。主治小建中汤证兼有纳少时寒时热，气虚自汗，短气困倦，消瘦，脉虚无力不数及有操劳过度史，无阴虚里热者。如小建中汤加当归，名当归建中汤。主治产后虚羸不足，腹中疼痛不止；或少腹拘急，痛引腰背，不能饮食等营血内虚证。
 
 本方加瓜蒌根（即天花粉），名瓜蒌桂枝汤。主治桂枝汤证，兼见项背强几几，脉反沉迟。用瓜蒌根清热生津，滋养筋脉，合桂枝汤调和营卫，以解外邪。
 
@@ -57,7 +52,6 @@
 
 本方二份合越婢汤一份名桂二越一汤。治太阳病发热恶寒，热多寒少，脉微弱者。此为微发其汗，兼清里热之方。
 
-综上所述，桂枝汤方加减甚多，最重要的有四个加减法既；寒加附子，热加黄芩，虚加人参，实加大黄。虽只加一味药，但已属变法。
+综上所述，桂枝汤方加减甚多，最重要的有四个加减法既：寒加附子，热加黄芩，虚加人参，实加大黄。虽只加一味药，但已属变法。
 
-### 〔方论选录〕
-王泰林：“桂枝一味，治太阳发热恶寒之的药，因脉浮弱汗自出，故加白芍敛阴护营，生姜佐桂以解表，大枣佐芍以和里，更用甘草和诸药。凡发热恶寒，脉浮弱，汗自出者，合此证即用此汤，勿拘风寒杂证也。”（《退思集类方歌注》）
+### 〔方论选录〕 王泰林：“桂枝一味，治太阳发热恶寒之的药，因脉浮弱汗自出，故加白芍敛阴护营，生姜佐桂以解表，大枣佐芍以和里，更用甘草和诸药。凡发热恶寒，脉浮弱，汗自出者，合此证即用此汤，勿拘风寒杂证也。”（《退思集类方歌注》）
