--- a/ok/zjz/zjz03-0.6.0.0.0.md
+++ b/ok/zjz/zjz03-0.6.0.0.0.md
@@ -1,4 +1,4 @@
-## 第六节水针&
+## 第六节水针
 
 〔自学时数〕2学时
 
@@ -12,11 +12,11 @@
 
 ### 一、用具及常用药物
 
-用具：根据使用药物的剂量大小及针刺部位的深浅选用不同的注射器及针头。常用的注射器为1毫升、2毫升、5毫升、10毫升、20毫升；常用针永头5〜6 (1/2)号普通注射针头，齿科用5号长针头，深部穴位可用9号长针头。
+1.用具：根据使用药物的剂量大小及针刺部位的深浅选用不同的注射器及针头。常用的注射器为1毫升、2毫升、5毫升、10毫升、20毫升；常用针永头5〜6 (1/2)号普通注射针头，齿科用5号长针头，深部穴位可用9号长针头。
 
 2.常用药物：凡是可供肌肉的药物，都是供水针用。
 
-常用的中药注射液有[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、,[红花](https://www.gmzyjc.com/read/bc/bc12-0.0.11.0.0.md)、复方[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、板蓝根、徐长卿、灯盏花、补骨脂、[柴胡](https://www.gmzyjc.com/read/bc/bc01-1.2.9.0.0.md)、鱼腥草，复方[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、川芎、[威灵仙](https://www.gmzyjc.com/read/bc/bc06-0.0.2.0.0.md)等；西药有：25%硫酸镁，维生素B1 B12，维生素C、K，0.25〜2%盐酸普鲁卡因，阿托品，利血平，[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)素，抗生素，胎盘组织液，生理盐水，5~10%葡萄糖注射液等。
+常用的中药注射液有[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、,[红花](https://www.gmzyjc.com/read/bc/bc12-0.0.11.0.0.md)、复方[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、板蓝根、徐长卿、灯盏花、补骨脂、[柴胡](https://www.gmzyjc.com/read/bc/bc01-1.2.9.0.0.md)、鱼腥草，复方[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、川芎、[威灵仙](https://www.gmzyjc.com/read/bc/bc06-0.0.2.0.0.md)等；西药有：25%硫酸镁，维生素B1、 B12，维生素C、K，0.25〜2%盐酸普鲁卡因，阿托品，利血平，[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)素，抗生素，胎盘组织液，生理盐水，5~10%葡萄糖注射液等。
 
 ### 二、操作方法
 
@@ -24,9 +24,9 @@
 
 2.注射方法：先选择适宜的消毒注射器和针头，抽好药液，把注射部位常规消毒，将针头按穴位所规定的方向和深度刺入穴位内，然后缓慢推入或上下提插，使穴位“得气"后，如回抽无血， 即可将药液注入。
 
-一般疾病用中等速度推入药液；慢性病、体弱患者用轻刺激，将药液缓慢推入 ；急性病、体强者用强刺激，快速将药物推入。 如注射药液量多时，可将注射针由深逐步提到浅层，边退针边推药，或将针更换几个方向注射药液，把药液推光。
+一般疾病用中等速度推入药液；慢性病、体弱患者用轻刺激，将药液缓慢推入 ；急性病、体强者用强刺激，快速将药物推入。如注射药液量多时，可将注射针由深逐步提到浅层，边退针边推药，或将针更换几个方向注射药液，把药液推光。
 
-3.注射剂量：水针注射的药液剂量决定于注射部位及药物性质和浓度。一般成人，中药制剂、维生素类每个穴1次可注射1〜2毫升；抗菌素类药物，每次可按原药剂量的1/5—1/2注射；5〜10%葡萄糖液，每次可注射5〜20毫升。注射部位，一般四肢、臀部肌肉较丰厚，注射量可多些；头、面、耳部皮肉较薄， 注射量每穴不超过0.1〜0.5毫升药液。
+3.注射剂量：水针注射的药液剂量决定于注射部位及药物性质和浓度。一般成人，中药制剂、维生素类每个穴1次可注射1〜2毫升；抗菌素类药物，每次可按原药剂量的1/5〜1/2注射；5〜10%葡萄糖液，每次可注射5〜20毫升。注射部位，一般四肢、臀部肌肉较丰厚，注射量可多些；头、面、耳部皮肉较薄， 注射量每穴不超过0.1〜0.5毫升药液。
 
 4.注射疗程：每日或隔日注射1次，反应强烈者亦可隔2〜3日1次，穴位可左右交替使用。10次为一疗程，每一疗程后，休息一周再继续下一疗程。
 
@@ -38,11 +38,11 @@
 
 1.水针注射时应注意药物的性能、药理作用、剂量、禁忌、 副作用和过敏反应。凡是能引起过敏反应的药物（青霉素等），必须先作皮试。副作用强的药物应慎用。
 
-2.—般药液不宜注射到关节腔，脊髓腔和血管内。这些药液误入关节腔可引起关节红肿、发热、疼痛等反应；误入脊髓腔， 有掼害脊髓的可能。
+2.—般药液不宜注射到关节腔，脊髓腔和血管内。这些药液误入关节腔可引起关节红肿、发热、疼痛等反应；误入脊髓腔，有掼害脊髓的可能。
 
-3.在主要神经干通过的穴位作水针注射时，应避开神经干， 或浅刺以不达到神经干所在的深度为宜。若针尖触及神经干，患 者有触电感，要稍退针、然后注入药液，以免损伤神经组织。
+3.在主要神经干通过的穴位作水针注射时，应避开神经干， 或浅刺以不达到神经干所在的深度为宜。若针尖触及神经干，患者有触电感，要稍退针、然后注入药液，以免损伤神经组织。
 
-4.水针注射躯干部位的腧穴，不能过深，防止刺伤内脏。孕 妇的下腹部、腰骶部及[合谷](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.4.md)、[三阴交](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.6.md)等穴，一般不宜作水针治疗， 以防引起流产。
+4.水针注射躯干部位的腧穴，不能过深，防止刺伤内脏。孕妇的下腹部、腰骶部及[合谷](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.2.3.4.md)、[三阴交](https://www.gmzyjc.com/read/zjs/zjs3.1.4-6-0.0.1.3.6.md)等穴，一般不宜作水针治疗， 以防引起流产。
 
 5.严格遵守无菌操作，防止感染，最好一穴一换针头。
 
@@ -82,7 +82,7 @@
 
 水针的作用主要有以下几方面：
 
-1.针剌腧穴的作用：经络学说认为，经络是气血运行的通路，内联脏腑，外络肢节，便气血循行畅通无阻，充分发挥其营内卫 外作用，从而使脏腑组织间保持平衡，内外协调，保证人体健康。而腧穴是分布经络线上，位于体表呈点状，是脉气注输的部位， 这就构成腧穴对人体有三种主要功能，即刺激点、传导点、反应 点。踰穴与经脉和脏腑相通，针刺腧穴可调整经络与脏腑功能，而治疗疾病的。
+1.针剌腧穴的作用：经络学说认为，经络是气血运行的通路，内联脏腑，外络肢节，便气血循行畅通无阻，充分发挥其营内卫外作用，从而使脏腑组织间保持平衡，内外协调，保证人体健康。而腧穴是分布经络线上，位于体表呈点状，是脉气注输的部位， 这就构成腧穴对人体有三种主要功能，即刺激点、传导点、反应点。踰穴与经脉和脏腑相通，针刺腧穴可调整经络与脏腑功能，而治疗疾病的。
 
 2.药物的刺激作用：穴位注射后，药物在穴位处滞留或存留时间较长，故可增强与延续穴位的治疗效能，并使之沿经络循行，以疏通经气，直达病所，发挥治疗作用。
 
