update ok/wk/wk01-1.0.0.0.0.md. 1.原文有“乃爱痈疽”，应为“乃发痈疽”，电子版已改。 2.原文有“合黄蝥”，应为“合黄堥”，电子版已改。 3.原文有“并对病因病机有了进步认识”，应为“并对病因病机有了进一步认识”，电子版已改。 4，原文有“宋代是敦国医学发展较快的时期”，应为“宋代是我国医学发展较快的时期”，电子版已改。 5，原文有“一一列出其加减用法”，应为“一 一列出其加减用法”，电子版已改。

--- a/ok/wk/wk01-1.0.0.0.0.md
+++ b/ok/wk/wk01-1.0.0.0.0.md
@@ -20,13 +20,13 @@
 
 中医外科有文字记载的资料很早，但渐具规模，形成一个学科，则是在汉代。就一般而言，在汉代外科学已经具备了以下条件：一有系统的理论体系；二有先进的哲学思想基础；三有代表人物；四有丰富的实践经验；五有继承和发扬的流派。
 
-那时已经传世的《内经》奠定了中医外科的理论基础，对外科病的病因病机有了初步的阐明。《灵枢•玉版》说：“病之生时，有喜怒不测，饮食不节，阴气不足，阳气有余，荣气不行，乃爱痈疽。”《素问•生气通天论》：“膏粱之变，足生大丁……荣气不从，逆于肉理，乃生痈肿。”这些都是对病因的认识。《灵枢•刺节真邪论》：“虚邪之中人也，洒淅动形起毫毛而发腠理，其入深……则为痈。”这说明了外科感染的途径。《灵枢•痈疽》则是一篇完整的外科专论，对外科化脓性疾病的形成机理作了精辟的论述：“血脉营卫，周流不休，上应星宿，下应经数，寒邪客于经络之中则血泣，血泣则不通，不通则卫气归之，不得复反，故痈肿。寒气化为热，热胜则肉腐，肉腐则为脓。”这些理论直到今天仍然指导着外科的临床应用。此外，在治疗上，还记载了豕膏外敷、铍针放脓、斩刈死趾等治疗方法。《内经》中这些医学理论，基本上是在当时先进的哲学思想——古代的唯物辩证法——整体的动态的天人相应学说、阴阳五行学说、精气神学说指导下形成的。
+那时已经传世的《内经》奠定了中医外科的理论基础，对外科病的病因病机有了初步的阐明。《灵枢•玉版》说：“病之生时，有喜怒不测，饮食不节，阴气不足，阳气有余，荣气不行，乃发痈疽”。《素问•生气通天论》：“膏粱之变，足生大丁……荣气不从，逆于肉理，乃生痈肿。”这些都是对病因的认识。《灵枢•刺节真邪论》：“虚邪之中人也，洒淅动形起毫毛而发腠理，其入深……则为痈”。这说明了外科感染的途径。《灵枢•痈疽》则是一篇完整的外科专论，对外科化脓性疾病的形成机理作了精辟的论述：“血脉营卫，周流不休，上应星宿，下应经数，寒邪客于经络之中则血泣，血泣则不通，不通则卫气归之，不得复反，故痈肿。寒气化为热，热胜则肉腐，肉腐则为脓。”这些理论直到今天仍然指导着外科的临床应用。此外，在治疗上，还记载了豕膏外敷、铍针放脓、斩刈死趾等治疗方法。《内经》中这些医学理论，基本上是在当时先进的哲学思想——古代的唯物辩证法——整体的动态的天人相应学说、阴阳五行学说、精气神学说指导下形成的。
 
-中医外科学形成于汉代的代表人物，是被历代誉为“神医”的东汉末年的外科鼻祖华佗(公元141〜203年）。华佗安徽亳县人，精通内、妇、儿、针灸各科，更擅长外科，最突出的成就是发明了全身麻醉剂——“麻沸散”，并首创了剖腹术。《后汉书》载：“若疾发于内，针药能及者，乃令先以酒服麻沸散，既醉无所觉，因刳破腹背，抽割积聚；若在肠胃，则断截湔洗；除去疾秽；既而缝合，傅以神膏，四五日创愈，一月之间皆平复。”同时还有三个开腹病例，一例是死胎，二例为腹中疾。
+中医外科学形成于汉代的代表人物，是被历代誉为“神医”的东汉末年的外科鼻祖华佗(公元141〜203年）。华佗安徽亳县人，精通内、妇、儿、针灸各科，更擅长外科，最突出的成就是发明了全身麻醉剂——“麻沸散”，并首创了剖腹术。《后汉书》载：“若疾发于内，针药能及者，乃令先以酒服麻沸散，既醉无所觉，因刳破腹背，抽割积聚；若在肠胃，则断截湔洗；除去疾秽；既而缝合，傅以神膏，四五日创愈，一月之间皆平复”。同时还有三个开腹病例，一例是死胎，二例为腹中疾。
 
-汉代时，已有了专供外用的药物，如《周礼•天官》中记载：“凡疗疡以五毒攻之，以五气养之，以五药疗之，以五味节之。”郑玄注五毒谓：“今（汉）医人有五毒之药，合黄蝥，置石胆、丹砂、雄黄、矾石、磁石其中，烧三日夜，其烟上着，以鸡羽扫取以治疡。"此即是现代升丹的炼法和应用之先河。还有《五十二病方》中的水银、酒；《内经》中的豕膏（豕膏就是猪油），这些都是现时膏药的萌芽。塗猪油的方法后汉时仍在沿用，《后汉书•东夷传》，“冬以豕膏塗身，厚数分，以御风寒。”汉代张仲景著的《金匮要略》，其中治疗肠痈、浸淫疮、寒疝、结胸等方药，至今仍为临床所应用，中医第一部外科专着，为《金创瘈疭方》，成书于西汉前后，可惜没有传世。
+汉代时，已有了专供外用的药物，如《周礼•天官》中记载：“凡疗疡以五毒攻之，以五气养之，以五药疗之，以五味节之。”郑玄注五毒谓：“今（汉）医人有五毒之药，合黄堥，置石胆、丹砂、雄黄、矾石、磁石其中，烧三日夜，其烟上着，以鸡羽扫取以治疡"。此即是现代升丹的炼法和应用之先河。还有《五十二病方》中的水银、酒；《内经》中的豕膏（豕膏就是猪油），这些都是现时膏药的萌芽。塗猪油的方法后汉时仍在沿用，《后汉书•东夷传》，“冬以豕膏塗身，厚数分，以御风寒”。汉代张仲景著的《金匮要略》，其中治疗肠痈、浸淫疮、寒疝、结胸等方药，至今仍为临床所应用，中医第一部外科专着，为《金创瘈疭方》，成书于西汉前后，可惜没有传世。
 
-由此可见，从理论到实践；从药物到手术，从制度到医生，中医外科到汉代已初步形成了一个独立的学科。
+由此可见，从理论到实践，从药物到手术，从制度到医生，中医外科到汉代已初步形成了一个独立的学科。
 
 ### 三、发展
 
@@ -36,9 +36,9 @@
 
 晋末时期，出现了我国现存的第一部外科学专著——《刘涓子鬼遗方》。本书传为晋末南朝宋人刘涓子遗著，齐•龚庆宣整理刊行。原著10卷，现仅存5卷：卷一论痈疽的鉴别；卷二为战伤的治法；卷三述痈疽的证治；卷四叙脓肿的诊断与手术；卷五论皮肤病的诊治，共收方剂151个。书中很重视外治法，介绍了止血、止痛、收敛、镇静、解毒等治疗方法，因而医史界称之为我国的军阵外科著作。该书对痈疽辨脓、切开、排脓、引流等方面论述尤为精详，如以硬度辨脓：“痈大坚者未有脓，半坚半薄有脓，当上薄者都有脓，便可破之”，如以痛辨脓等等。书中火针的运用，也是决脓术的一大发展。在痈疽的治疗上，该书初步建立了辨证论治的思想，运用了外治消（消散）、蚀（食恶肉）、收（收口生肌）的三种治则，体现了作者内外合治的丰富经验。总之，总结了古代中医外科学的成就和医疗经验，对我国外科学非手术疗法的发展有很大影响。
 
-隋唐时期外科的发展较快。巢元方等编写的我国第一部病源病理学专书《诸病源候论》包含有不少外科内容，如瘿瘤、丹毒、疔疮、痈疽，痔瘘等，对皮肤病记述尤详，计有40多种，并对病因病机有了进步认识，如认为漆疮是：“人有禀性畏漆，但见漆便中其毒”，肯定了此病与人体体质的关系。同时还明确指出：疥疮有疥虫，癣病有癣虫。在当时条件下，能认识到有病源体的存在，确是一项重大的突破。在“金创断肠候”中记载了对“腹珊”（脂肪）脱出的手术，即先用丝线结扎血管，然后再截除。并第一次记载了人工流产术和肠吻合术，以及血管结扎、拔牙等手术。可见当时对腹部外伤的处理已达到了相当高的水平。唐孙思邈的《千金要方》是我国最早的一部临床实用百科全书，载有丰富的外科学内容。孙思邈是饮食疗法和脏器疗法的创始人，他发明的吃牛羊乳治疗脚气病；吃羊靥、鹿靥治疗甲状腺肿大；吃动物肝脏治疗夜盲症等都被现代科学所证实。至于葱管导尿法则比法国发明的橡皮管导尿法要早1200多年。其他尚有王焘的《外台秘要》，该书载痈疽、瘿瘤、脚气、痔瘘、金疮、恶疾大风等六卷，收方1300余首，亦是外科方药的重要参考文献。
+隋唐时期外科的发展较快。巢元方等编写的我国第一部病源病理学专书《诸病源候论》包含有不少外科内容，如瘿瘤、丹毒、疔疮、痈疽，痔瘘等，对皮肤病记述尤详，计有40多种。并对病因病机有了进一步认识，如认为漆疮是：“人有禀性畏漆，但见漆便中其毒”，肯定了此病与人体体质的关系。同时还明确指出：疥疮有疥虫，癣病有癣虫。在当时条件下，能认识到有病源体的存在，确是一项重大的突破。在“金创断肠候”中记载了对“腹珊”（脂肪）脱出的手术，即先用丝线结扎血管，然后再截除。并第一次记载了人工流产术和肠吻合术，以及血管结扎、拔牙等手术。可见当时对腹部外伤的处理已达到了相当高的水平。唐孙思邈的《千金要方》是我国最早的一部临床实用百科全书，载有丰富的外科学内容。孙思邈是饮食疗法和脏器疗法的创始人，他发明的吃牛羊乳治疗脚气病；吃羊靥、鹿靥治疗甲状腺肿大；吃动物肝脏治疗夜盲症等都被现代科学所证实。至于葱管导尿法则比法国发明的橡皮管导尿法要早1200多年。其他尚有王焘的《外台秘要》，该书载痈疽、瘿瘤、脚气、痔瘘、金疮、恶疾大风等六卷，收方1300余首，亦是外科方药的重要参考文献。
 
-宋代是敦国医学发展较快的时期，外科学家从理论上更加重视整体与局部的关系，使辨证论治进一步用于临床，如《太平圣惠方》（公元992年）中有关外科疾病部分，除了对病因、病机、治疗、预后等详加论述外，还对不同的症状，详列不同的治法，充分体现了辨证论治在外科疾病上的具体应用。在诊断方面，总结了前人的经验，第一次系统地提出了"五善七恶”学说。在治疗上注重扶正与祛邪相结合，内治与外治相结合，创立了“内消”和"托里"的方法，并首先提出用砒剂治疗痔核，用蟾酥酒止血、止痛，用烧灼法消毒手术器械等等。宋代以来，外科专著日益增多，东轩居士箸的《卫济宝书》（公元1170年），上卷专论痈疽，并附有简图；下卷专言治法，并对应用范围较广的方剂，一一列出其加减用法。书中还记载了很多医疗器械，如灸板、消息子、炼刀、竹刀、小钩等。李迅的《集验背疽方》（公元1196年）是背疽专书，对背疽的病因、症状、用药、禁忌等均有阐述。指出发疽有内外之别，外发者易治，內发者难治。陈自明撰《外科精要》（公元1262年），强调对痈疽的辨证施治，区分寒热虚实以对证治疗，不可拘泥于热毒内攻之说而专用寒凉克伐之剂。强调了疮疡的整体疗法，载有托里排脓汤等很多方剂，至今仍在延用。
+宋代是我国医学发展较快的时期，外科学家从理论上更加重视整体与局部的关系，使辨证论治进一步用于临床，如《太平圣惠方》（公元992年）中有关外科疾病部分，除了对病因、病机、治疗、预后等详加论述外，还对不同的症状，详列不同的治法，充分体现了辨证论治在外科疾病上的具体应用。在诊断方面，总结了前人的经验，第一次系统地提出了"五善七恶”学说。在治疗上注重扶正与祛邪相结合，内治与外治相结合，创立了“内消”和"托里"的方法，并首先提出用砒剂治疗痔核，用蟾酥酒止血、止痛，用烧灼法消毒手术器械等等。宋代以来，外科专著日益增多，东轩居士箸的《卫济宝书》（公元1170年），上卷专论痈疽，并附有简图；下卷专言治法，并对应用范围较广的方剂，一一列出其加减用法。书中还记载了很多医疗器械，如灸板、消息子、炼刀、竹刀、小钩等。李迅的《集验背疽方》（公元1196年）是背疽专书，对背疽的病因、症状、用药、禁忌等均有阐述。指出发疽有内外之别，外发者易治，內发者难治。陈自明撰《外科精要》（公元1262年），强调对痈疽的辨证施治，区分寒热虚实以对证治疗，不可拘泥于热毒内攻之说而专用寒凉克伐之剂。强调了疮疡的整体疗法，载有托里排脓汤等很多方剂，至今仍在延用。
 
 元代的外科成就，以齐德之《外科精义》（公元1335年）为代表。他总结了三十多家外科著作，结合自己的临床经验撰著而成。他从整体观出发，提出外科病多为阴阳不和、气血凝滞所致，且论述脉诊甚详。在治疗方面，他认为“治其外而不治其内，治其末而不治其本”的方法是不全面的。主张治疗疮疡必须先审阴阳虚实，脉证结合，然后采用内外相辅的综合方法，他的这些思想有些很有实用价值。此外，还有朱震亨的《外科精要发挥》和危亦林的《世医得效方》。《世医得效方》（公元1337年）是一部创伤外科专著，是现今世界上已知最早的载有全身麻醉文献的专著，比日本华同青州在1805年用蔓陀罗汁麻醉要早450年。本书对麻醉药的组成、适应证、剂量等均有详实的记述。
 
@@ -46,7 +46,7 @@
 
 明代以及清代鸦片战争之前的时期，是外科发展的兴盛时期，其主要标志是名家辈出，著作如林，学术争鸣。
 
-薛己的《外科发挥》、《外科枢要》（公元1529年）从理论到临床均加论述，文字简要，内容翔实，第一次详细记述了对新生儿破伤风的诊治。汪机的《外科理例》（公元1531年）主张外病内治，切戒滥用刀针。曾说“外科必本于内，知乎内，以求乎外，其如视诸掌乎。.……治外遗内，所谓不揣其本而齐其未。”说明医治外科疾病，必须掌握中医基本理论，立法才能正确。陈实功的《外科正宗》（公元1617年），全书四卷，较全面地介绍了外科学的病因、病机、诊断和治疗原则，细载病名，详列治法，并附有验案，自唐到明的外科治法，此书大多收录，曾以“列证详、论治精”见称。这是一部代表明以前外科学伟大成就的重要文献，从学术思想上来看，该书重视脾胃。他说“疮全赖脾土”，“盖脾胃盛则多食而易饥，其人多肥，气血亦壮；脾胃弱，则少食而难化，其人多瘦，气血亦衰。故外科尤以调理脾胃为要”。又说“托里则气血壮而脾胃盛，使脓秽自排，毒气自解，死肉自溃，新肉自生，饮食自进，疮口自敛。”在手术治疗方面的成就更为突出，共记述了14种手术方法，如脱疽截趾（指）术、鼻瘜肉摘除术、食道异物取出术、下颌关节复位术、颈吻合术、腹腔穿刺排脓术等，都有很大的实用价值。同时还述及了口唇创伤缝合术、缺耳、缺唇矫形术；并指出了良性肿瘤和恶性肿瘤的鉴别诊断和治疗原则等。而且设计制造了巧妙的手术器械，如鼻痔的摘除工具，这与近代使用的鼻瘜肉绞断器甚为相近。书中他还提出换药室应“窗明几净”，疮口应予冲洗。护理上，强调注意病人的饮食营养，反对无原则的饮食禁忌，等等。由此，陈实功对外科学的发展可见一斑了。之后顺治、康熙时御医祁坤编写的《外科大成》，继承了《外科正宗》的理论和治庁经验。其子祁昭远，继承父业，康熙、雍正时任太医院院判。其孙祁宏源，编写了《医宗金鉴•外科心法要诀》，该书内容丰富，既有理论，尤重实践，系统总结了清代以前历代外科医家的经验，是学习中医外科的重要著作。
+薛己的《外科发挥》、《外科枢要》（公元1529年）从理论到临床均加论述，文字简要，内容翔实，第一次详细记述了对新生儿破伤风的诊治。汪机的《外科理例》（公元1531年）主张外病内治，切戒滥用刀针。曾说“外科必本于内，知乎内，以求乎外，其如视诸掌乎。.……治外遗内，所谓不揣其本而齐其未”。说明医治外科疾病，必须掌握中医基本理论，立法才能正确。陈实功的《外科正宗》（公元1617年），全书四卷，较全面地介绍了外科学的病因、病机、诊断和治疗原则，细载病名，详列治法，并附有验案自唐到明的外科治法，此书大多收录，曾以“列证详、论治精”见称。这是一部代表明以前外科学伟大成就的重要文献，从学术思想上来看，该书重视脾胃。他说“疮全赖脾土”，“盖脾胃盛则多食而易饥，其人多肥，气血亦壮；脾胃弱，则少食而难化，其人多瘦，气血亦衰。故外科尤以调理脾胃为要”。又说“托里则气血壮而脾胃盛，使脓秽自排，毒气自解，死肉自溃，新肉自生，饮食自进，疮口自敛”。在手术治疗方面的成就更为突出，共记述了14种手术方法，如脱疽截趾（指）术、鼻瘜肉摘除术、食道异物取出术、下颌关节复位术、颈吻合术、腹腔穿刺排脓术等，都有很大的实用价值。同时还述及了口唇创伤缝合术、缺耳、缺唇矫形术；并指出了良性肿瘤和恶性肿瘤的鉴别诊断和治疗原则等。而且设计制造了巧妙的手术器械，如鼻痔的摘除工具，这与近代使用的鼻瘜肉绞断器甚为相近。书中他还提出换药室应“窗明几净”，疮口应予冲洗。护理上，强调注意病人的饮食营养，反对无原则的饮食禁忌，等等。由此，陈实功对外科学的发展可见一斑了。之后顺治、康熙时御医祁坤编写的《外科大成》，继承了《外科正宗》的理论和治庁经验。其子祁昭远，继承父业，康熙、雍正时任太医院院判。其孙祁宏源，编写了《医宗金鉴•外科心法要诀》，该书内容丰富，既有理论，尤重实践，系统总结了清代以前历代外科医家的经验，是学习中医外科的重要著作。
 
 康熙乾隆年间王维德著《外科证治全生集》（公元1740年）。该书特点是：创立了以阴阳为主的辨证论治法则，所谓“凭经治证，天下皆然，分别阴阳，唯余一家”。把复杂的外科疾患分为阴阳两类，如痈阳、疽阴等。主张“以消为贵，以托为畏”，除治疔用刺外，反对滥用刀针，禁用腐蚀药物。特别是对阴证的治疗具有独特的见解，主张以“阳和通腠，温补气血”的原则治疗阴证，他说“世人一概清火以解毒，殊不知毒即是寒，解寒而毒自化，清火而毒愈凝。然毒之化要由脓，脓之来，必由气血，气血之化必由温也，岂可凉乎？”自拟阳和汤、醒消丸、犀黄丸、小金丹等名方用于临床，直到现在，仍为有效方药。其后许克昌、毕法合写的《外科证治全书》继承了《外科证治全生集》的特长，而且有所发挥。高秉钧所著《疡科心得集》（公元1809年），认为外科疾病的发病原因与其发病部位有一定的联系，“疡科之证，在上部者倶属风温、风热；……在下部者俱属湿火、湿热；……在中部者多属气郁，火郁”。在辨证论治上对外科阳证、热证，特别是“走黄”、“内陷”的理论论述有所提高，而且首先引用了温病学派的犀角地黄汤、紫雪丹、至宝丹治疗疔疮走黄，提高了疗效，开拓了思路，至今仍有很大实用价值。在编写体例上以两种相似病证互编一算，详加鉴别，对于辨证论治很有启发，这是中医外科学中有鉴别诊断的重要文献。其后余听鸿《外证医案汇编》对高秉钧的学术思想有所发挥。
 
@@ -54,11 +54,11 @@
 
 近代张山雷《疡科纲要》（公元1927年），内容简要，立论、辨证、用药均有特色，对外科的发展有一定影响。
 
-近百年来，由于帝国主义侵入我国，祖国医学受到排挤。解放以后，由于贯彻执行了党的中医政策，中医外科学重新获得新生和发展。如用中医中药治疗痈、疽、疔疮，乳病；用结扎和注射疗法治疗内痔；用切开或挂线疗法治疗肛瘘；内外合治脱疽、静脉炎；中西医结合治疗红斑性狼疮、硬皮病、毒蛇咬伤、烧伤等，都取得了很大进展。急腹症的中医药治疗和理论上的探讨，针刺麻醉原理的研究，都出现了可喜的苗头。
+近百年来，由于帝国主义侵入我国，祖国医学受到排挤。解放以后，由于贯彻执行了党的中医政策，中医外科学重新获得新生和发展。如用中医中药治疗痈、疽、疔疮、乳病；用结扎和注射疗法治疗内痔；用切开或挂线疗法治疗肛瘘；内外合治脱疽、静脉炎；中西医结合治疗红斑性狼疮、硬皮病、毒蛇咬伤、烧伤等，都取得了很大进展。急腹症的中医药治疗和理论上的探讨，针刺麻醉原理的研究，都出现了可喜的苗头。
 
 总之，中医外科学是从实践中产生的一门科学，具有独特的理论体系和丰富的临床经验，取得了很大的成就，对世界医学作出了应有贡献。所以我们应当努力学习，加强对中医外科学的研究，以促进人类健康事业的更大发展。
 
-复习思考题
+**复习思考题**
 
 1.简述外科的起源。
 
