update ok/wk/wk02.md. 1，原文中有“皮肤不穿不热”，应为“皮肤不红不热”，电子版已改。

--- a/ok/wk/wk02.md
+++ b/ok/wk/wk02.md
@@ -14,7 +14,7 @@
 
 （一）外感六淫
 
-风、寒、暑、湿、燥、火称为六淫，均能引发外科疾病，但大多以火毒为主：
+风、寒、暑、湿、燥、火称为六淫，均能引发外科疾病，但大多以火毒为主。
 
 1.火毒：火热是外科疾病中最主要的致病因素，如《医宗金鉴》云：“痈疽原是火毒生。”火乃热之极，热为火之渐，火与热都属阳邪，两者郁久都可生毒。热毒势缓，火毒势猛。
 
@@ -38,11 +38,11 @@
 
 寒在肌肤：见皮肤局部暗红肿胀，轻者麻痛，重者出现水泡，血泡，腐烂，溃脓，久不收口，如冻疮等。
 
-寒在经脉：见痛有定处，皮肤不穿不热，甚或冰冷畏寒，肤色苍白或青紫，趺阳脉、太溪脉搏动微弱，甚则消失，如脱疽。
+寒在经脉：见痛有定处，皮肤不红不热，甚或冰冷畏寒，肤色苍白或青紫，趺阳脉、太溪脉搏动微弱，甚则消失，如脱疽。
 
 寒在筋骨：见筋骨隐隐疼痛，不红不热，但不欲行动。甚者痛彻入骨，不能屈伸转动，动则加剧，苔白腻，脉迟紧，如附骨疽等。
 
-寒在脏腑：有内寒、外寒之别。内寒者，见腹痛绵绵，喜热怕冷，得热则缓，喜按，四肢逆冷，大便溏薄，脉沉迟，如某些慢性肠结等。外寒者，见发病急骤，腹痛剧烈，腹胀便结，呕不;能食，脉多沉紧，甚或脉伏，如肠结等。
+寒在脏腑：有内寒、外寒之别。内寒者，见腹痛绵绵，喜热怕冷，得热则缓，喜按，四肢逆冷，大便溏薄，脉沉迟，如某些慢性肠结等。外寒者，见发病急骤，腹痛剧烈，腹胀便结，呕不能食，脉多沉紧，甚或脉伏，如肠结等。
 
 4.风邪：多犯人体上部和肌表，在外科中多与热、湿两邪相兼致病。
 
